--- a/notes/排序.md
+++ b/notes/排序.md
@@ -235,7 +235,7 @@ public class MergeSort {
 
     }
     
-    //另一个种实现
+    //另一个种实现 记这个版本
     private void quickSort(int[] arr, int l, int r) {
         // 子数组长度为 1 时终止递归
         if (l >= r) return;
@@ -246,6 +246,7 @@ public class MergeSort {
             while (i < j && arr[i] <= arr[l]) i++;
             swap(arr, i, j);
         }
+        //下面是i或j都可以
         swap(arr, i, l);
         // 递归左（右）子数组执行哨兵划分
         quickSort(arr, l, i - 1);
