--- a/notes/排序.md
+++ b/notes/排序.md
@@ -246,7 +246,7 @@ public class MergeSort {
             while (i < j && arr[i] <= arr[l]) i++;
             swap(arr, i, j);
         }
-        //下面是i或j都可以
+        //下面是i或j都可以 此时i==j 且指向一个比arr[l]小的值
         swap(arr, i, l);
         // 递归左（右）子数组执行哨兵划分
         quickSort(arr, l, i - 1);
