--- a/notes/排序.md
+++ b/notes/排序.md
@@ -242,6 +242,7 @@ public class MergeSort {
         // 哨兵划分操作（以 arr[l] 作为基准数）
         int i = l, j = r;
         while (i < j) {
+            //注意先循环右边 j--
             while (i < j && arr[j] >= arr[l]) j--;
             while (i < j && arr[i] <= arr[l]) i++;
             swap(arr, i, j);
