--- a/notes/排序.md
+++ b/notes/排序.md
@@ -293,4 +293,39 @@ public class MergeSort {
         return pivot;
     }
 }
+
+    //二分找到左边界
+    public int findLeft(int[] nums,int target){
+        int L = 0;
+        int R = nums.length - 1;
+
+        while(L < R){
+            int mid = (L + R) / 2;
+            if(nums[mid] >= target){
+                R = mid;
+            }else{
+                L = mid + 1; 
+            }
+        }
+        
+        return L;
+    }
+
+    // 二分找到右边界
+    public int findRigth(int[] nums,int target){
+        
+        int L = 0;
+        int R = nums.length - 1;
+
+        while(L < R){
+            int mid = (L + R + 1) / 2;
+            if(nums[mid] <= target){
+                L = mid;
+            }else{
+                R = mid - 1;
+            }
+        }
+        
+        return L;
+    }
 ```
