--- a/notes/排序.md
+++ b/notes/排序.md
@@ -161,6 +161,7 @@ public class MergeSort {
     private static void sort(int[] arr,int left,int right,int []temp){
         if(left<right){
             int mid = (left+right)/2;
+            //注意mid,mid + 1可以     mid-1 mid不可以
             sort(arr,left,mid,temp);//左边归并排序，使得左子序列有序
             sort(arr,mid+1,right,temp);//右边归并排序，使得右子序列有序
             merge(arr,left,mid,right,temp);//将两个有序子数组合并操作
