--- a/notes/排序.md
+++ b/notes/排序.md
@@ -329,4 +329,74 @@ public class MergeSort {
         
         return L;
     }
+
+
+
+/**
+ * 堆排序的Java代码实现
+ */
+public class HeapSort {
+    public void heapSort(int[] arr) {
+ 
+        if (arr == null || arr.length <= 0) {
+            return;
+        }
+ 
+        //建立堆
+        headBuild(arr);
+ 
+        //循环遍历，交换最大值（根）到末尾
+        for (int i = arr.length - 1; i >= 1; i--) {
+            int temp = arr[0];
+            arr[0] = arr[i];
+            arr[i] = temp;
+            //交换后重新调整根为最大堆
+            maxHead(arr, 0, i);
+        }
+    }
+ 
+    /**
+     * 建立堆
+     *
+     * @param arr
+     */
+    private void headBuild(int[] arr) {
+        //这里(arr.length >> 1) - 1是二叉树的倒数第一个非叶子节点（可以用数学推导）
+        //其中叶子节点不需要构建大顶堆，所以从倒数第一个非叶子节点往上遍历调整大顶堆即可
+        for (int i = (arr.length >> 1) - 1; i >= 0; i--) {
+            //构建大顶堆
+            maxHead(arr, i, arr.length);
+        }
+    }
+ 
+    /**
+     * 构建大顶堆
+     *
+     * @param arr
+     * @param index
+     * @param length
+     */
+    private void maxHead(int[] arr, int index, int length) {
+        //根子节点index的左子节点是(index << 1) + 1，右子节点是(index << 1) + 2（可以用数学推导）
+        int l = (index << 1) + 1;
+        int r = (index << 1) + 2;
+        int largest = index;
+ 
+        if (l < length && arr[l] > arr[largest]) {
+            largest = l;
+        }
+        if (r < length && arr[r] > arr[largest]) {
+            largest = r;
+        }
+ 
+        //若最大值不在根节点，则交换最大值到根节点
+        if (largest != index) {
+            int temp = arr[largest];
+            arr[largest] = arr[index];
+            arr[index] = temp;
+            //递归把更改过的子节点调整为最大堆
+            maxHead(arr, largest, length);
+        }
+    }
+}
 ```
