--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -51,7 +51,7 @@
 	- 由于它的存在，使得多道程序环境下，不能独立运行的程序成为一个能独立运行的基本单位，使得程序可以并发执行
 	- 系统通过 PCB 来感知进程的存在。（换句话说，PCB 是进程存在的唯一标识）
 	- 进程的组成可以用下图来表示，PCB 就是他唯一标识符。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/53c2941897c2495a89169ea90c285506.png)
+	![在这里插入图片描述](https://img-blog.csdnimg.cn/53c2941897c2495a89169ea90c285506.png)
 
 
 ## 线程、进程、协程的区别
@@ -99,11 +99,11 @@
 
 - 管道
 	- 匿名管道：举个例子：linux 里的竖线，就是管道的意思，比如 ps -aux|grep mysql 这句话的意思是把前一个进程查询的结果作为 grep mysql 的输入，如果两个进程要进行通信的话，就可以用这种管道来进行通信。
-这种通信的方式是半双工通信的，只能单向交替传输
-并且只能在具有亲属关系的进程之间通信使用。
-可以看成是一种特殊的文件，但是这种文件只能存在于内存之中。
+	这种通信的方式是半双工通信的，只能单向交替传输
+	并且只能在具有亲属关系的进程之间通信使用。
+	可以看成是一种特殊的文件，但是这种文件只能存在于内存之中。
 	- 命名管道：可以用 mkfifo 命令创建一个命名管道，可以用一个进程向管道里写数据，然后可以让另一个进程把里面的数据读出来。命名管道的优点是去除了只能在父子进程中使用的限制，并且命名管道有路径名和它相关联，是以一种特殊设备文件形式存在于文件系统中的。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/3ed5ba6ad67543e7b3a4f3ca6ba9e91a.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
+	![在这里插入图片描述](https://img-blog.csdnimg.cn/3ed5ba6ad67543e7b3a4f3ca6ba9e91a.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
 - 消息队列
 
 	- 消息队列的通信模式是这样的：a 进程要给 b 进程发消息，只需要把消息挂在消息队列（可以是中介邮局，也可以是进程自己的信箱）里就行了，b 进程需要的时候再去取消息队列里的消息。
@@ -315,8 +315,8 @@ V：对信号量执行加 1 操作，并唤醒正在 waiting 的进程
 - 离散分配管理：允许一个程序使用的内存分布在离散或者不相邻的内存中
 	- 页式管理
 		- 将内存分为大小相等且固定的一页一页的形式，页较小，相比于块式管理划分得更细，提高内存利用率，减少碎片。页式管理通过页表对应逻辑地址和物理地址
-逻辑地址划分为固定大小的页，同样，物理地址划分为同样大小的页框，页与页框之间通过页表对应起来
-没有外碎片(页的大小是固定的)，但是会产生内碎片(一个页可能会填不满)
+		逻辑地址划分为固定大小的页，同样，物理地址划分为同样大小的页框，页与页框之间通过页表对应起来
+		没有外碎片(页的大小是固定的)，但是会产生内碎片(一个页可能会填不满)
 	- 段式管理
 		- 将程序的地址空间划分为若干段，如代码段、数据段、堆栈段等
 		- 每一段具有实际意义
@@ -431,7 +431,7 @@ https://www.nowcoder.com/discuss/810741?channel=-1&source_id=profile_follow_post
 在分段管理基础上，添加了请求调段功能和分段置换功能
 过程类似上述
 - 3 请求段页存储管理
- 
+
 **这和内存管理的机制有什么不同呢？**
 请求分页式存储管理建立在分页管理之上，他们的根本区别是用不用把程序所需的全部地址空间 load 到内存里。请求分页式不需要全部 load 到内存中，而分页式管理需要，前者能够提供虚拟内存，后者不可以！
 
@@ -482,7 +482,7 @@ data = socket.read();
 
 然后，内核会等待数据准备完成，再将数据拷贝到用户线程，当这一切都完成之后，内核会给用户线程发送一个信号，告诉它read操作完成了。
 
-当接收内核返回的成功信号时表示IO操作已经完成，可以直接去使用数据了。
+**当接收内核返回的成功信号时表示IO操作已经完成，可以直接去使用数据了。**
 
 （也就说用户线程完全不需要关心实际的整个IO操作是如何进行的，只需要先发起一个请求。)
 
@@ -497,7 +497,7 @@ data = socket.read();
 
 ⑤信号驱动IO（signal driven IO）
 
-在信号驱动IO模型中，当用户线程发起一个IO请求操作，会给对应的socket注册一个信号函数，然后用户线程会继续执行，当内核数据就绪时会发送一个SIGIO信号给用户线程，用户线程接收到信号之后，便在信号函数中调用IO读写操作来进行实际的IO请求操作。
+在信号驱动IO模型中，当用户线程发起一个IO请求操作，会给对应的socket注册一个信号函数，然后用户线程会继续执行，当内核数据就绪时会发送一个SIGIO信号给用户线程，用户线程接收到信号之后，**便在信号函数中调用IO读写操作来进行实际的IO请求操作**。
 
 ## IO 复用 select poll epoll比较
 [链接](http://www.cyc2018.xyz/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9F%BA%E7%A1%80/Socket/Socket.html#%E4%BA%8C%E3%80%81i-o-%E5%A4%8D%E7%94%A8).
@@ -552,8 +552,9 @@ poll 没有最大描述符数量的限制，如果平台支持并且对实时性
 
 3. epoll 应用场景
 	- 只需要运行在 Linux 平台上，有大量的描述符需要同时轮询，并且这些连接最好是长连接。
+
  	- 需要同时监控小于 1000 个描述符，就没有必要使用 epoll，因为这个应用场景下并不能体现 epoll 的优势。
-	- 需要监控的描述符状态变化多，而且都是非常短暂的，也没有必要使用 epoll。因为 epoll 中的所有描述符都存储在内核中，造成每次需要对描述符的状态改变都需要通过 epoll_ctl() 进行系统调用，频繁系统调用降低效率。并且 epoll 的描述符存储在内核，不容易调试。
+ 	- 需要监控的描述符状态变化多，而且都是非常短暂的，也没有必要使用 epoll。因为 epoll 中的所有描述符都存储在内核中，造成每次需要对描述符的状态改变都需要通过 epoll_ctl() 进行系统调用，频繁系统调用降低效率。并且 epoll 的描述符存储在内核，不容易调试。
 
 ## 磁盘调度算法
 1. 先来先服务
