--- a/notes/计算机网络面经.md
+++ b/notes/计算机网络面经.md
@@ -1,5 +1,4 @@
-﻿参考
-https://www.nowcoder.com/discuss/826919 channel=-1&source_id=discuss_terminal_discuss_sim_nctrack&ncTraceId=48d6da80779b4df6bae307a8fc32418f.228.16449002695229979
+﻿[参考](https://www.nowcoder.com/discuss/826919 channel=-1&source_id=discuss_terminal_discuss_sim_nctrack&ncTraceId=48d6da80779b4df6bae307a8fc32418f.228.16449002695229979)
 
 ## 网络分层结构
 横向看（为哪两个平行的东西提供服务）
