--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -177,12 +177,28 @@ V：对信号量执行加 1 操作，并唤醒正在 waiting 的进程
 	- 优点：事件对象通过通知操作的方式来保持线程的同步，并且可以实现不同进程中的线程同步操作。
 
 
+
+## 进程的三种状态
+
+![img](https://img-blog.csdnimg.cn/20190922131403201.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2dhbmdoYW9kcmVhbQ==,size_16,color_FFFFFF,t_70)
+
+**就绪状态**：进程已经准备好，已分配到所需资源，只要分配到CPU就能够立即运行
+
+**执行状态**：进程处于就绪状态被调度后，进程进入执行状态
+
+**阻塞状态**：正在执行的进程由于某些事件（I/O请求，申请缓存区失败）而暂时无法运行，进程受到阻塞。在满足请求时进入就绪状态等待系统调用
+
+
+
+
 ## 进程的五种状态
 面试在答的时候这么答：有创建状态、就绪状态、运行状态、阻塞状态、结束状态。
 
 其中只有就绪状态和运行状态能互相转化，当进程为就绪态时，等待 CPU 分配时间片，得到时间片后就进入 运行状态
 运行状态在使用完 CPU 时间片后，又重回就绪态。
 阻塞状态是进程在运行状态时，需要等待某个资源比如打印机资源，而进入一个挂起的状态，等资源拿到后会回到就绪状态，等待 CPU 时间片。
+
+
 
 
 ## 进程的调度算法
@@ -499,7 +515,10 @@ data = socket.read();
 
 在信号驱动IO模型中，当用户线程发起一个IO请求操作，会给对应的socket注册一个信号函数，然后用户线程会继续执行，当内核数据就绪时会发送一个SIGIO信号给用户线程，用户线程接收到信号之后，**便在信号函数中调用IO读写操作来进行实际的IO请求操作**。
 
+
+
 ## IO 复用 select poll epoll比较
+
 [链接](http://www.cyc2018.xyz/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9F%BA%E7%A1%80/Socket/Socket.html#%E4%BA%8C%E3%80%81i-o-%E5%A4%8D%E7%94%A8).
 
 **select** 允许应用程序监视一组文件描述符，等待一个或者多个描述符成为就绪状态，从而完成 I/O 操作。
