--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -232,24 +232,119 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 
 ### 比较
 - 事务：InnoDB 是事务型的，可以使用 Commit 和 Rollback 语句。
-
 - 并发：MyISAM 只支持表级锁，而 InnoDB 还支持行级锁。
-
 - 外键：InnoDB 支持外键。
-
 - 备份：InnoDB 支持在线热备份。
-
 - 崩溃恢复：MyISAM 崩溃后发生损坏的概率比 InnoDB 高很多，而且恢复的速度也更慢。
-
 - 其它特性：MyISAM 支持压缩表和空间数据索引。
+
+
+
+记住这个
 
 
 另一个版本
 - InnoDB支持行锁 支持事务 支持外键 支持MVCC 支持崩溃后的安全恢复
-
 - **InnoDB**支持行级锁和表级锁  但MyISAM只支持表级锁
-
 - **MyISAM**强调的是性能，每次查询具有原子性,其执行速度比InnoDB类型更快
+
+
+
+## 数据库的索引（面试常考！)
+
+索引是存储引擎用于提高数据库表的访问速度的一种**数据结构**。
+
+
+
+## 索引的种类
+
+**普通索引**: 即针对数据库表创建索引
+
+**唯一索引**: 与普通索引类似，不同的就是：MySQL 数据库索引列的值必须唯一，**但允许有空值**
+
+**主键索引**: 它是一种特殊的唯一索引，**不允许有空值**。一般是在建表的时候同时创建主键索引
+
+**组合索引**(联合索引): 为了进一步榨取 MySQL 的效率，就要考虑建立组合索引。
+
+即将数据库表中的多个字段联合起来作为一个组合索引。
+
+**全文索引**：只有在`MyISAM`引擎上才能使用，只能在`CHAR`、`VARCHAR`和`TEXT`类型字段上使用全文索引。
+
+
+
+## 索引的数据结构
+
+索引的数据结构主要有**B 树， B+树和 哈希表**，对应也就有B+树索引 和 哈希索引
+
+既然哈希表这么快，**为什么MySQL 没有使用其作为索引的数据结构呢**
+
+- **1.Hash 冲突问题**
+- **2.Hash 索引不支持顺序和范围查询(Hash 索引不支持顺序和范围查询是它最大的缺点：** 假如我们要对表中的数据进行排序或者进行范围查询，那 Hash 索引可就不行了。
+
+
+
+## **B 树& B+树**
+
+- B 树的所有节点既存放键(key) 也存放 数据(data)，而 B+树只有叶子节点存放 key 和 data，其他内节点只存放 key。
+- B 树的叶子节点都是独立的;B+树的叶子节点有一条引用链指向与它相邻的叶子节点。
+- B 树的检索的过程相当于对范围内的每个节点的关键字做二分查找 B+树的检索，都是从根节点到叶子节点的过程，叶子节点的顺序检索很明显
+
+
+
+**B+树的结构图**
+
+![img](https://img-blog.csdnimg.cn/20210420165409106.png)
+
+**在 MySQL 中，MyISAM 引擎和 InnoDB 引擎都是使用 B+Tree 作为索引结构**
+
+
+
+### 为什么B+树比B树更适合实现数据库索引？
+
+- 由于B+树的数据都存储在叶子结点中，叶子结点均为索引，方便扫库，只需要扫一遍叶子结点即可，但是B树因为其分支结点同样存储着数据，我们要找到具体的数据，需要进行一次中序遍历按序来扫，所以B+树更加适合在**范围区间查询**的情况，而在数据库中基于范围的查询是非常频繁的，所以通常B+树用于数据库索引。
+
+- B+树的节点只存储索引key值，具体信息的地址存在于叶子节点的地址中。这就使以页为单位的索引中可以存放更多的节点。**减少更多的I/O支出**。
+
+**解释**：B+树的内部结点并没有指向关键字具体信息的指针，其内部结点比B树小，盘块能容纳的结点中关键字数量更多，一次性读入内存中可以查找的关键字也就越多，相对的，IO读写次数也就降低了。
+
+- B+树的**查询效率更加稳定**，任何关键字的查找必须走一条从根结点到叶子结点的路。所有关键字查询的路径长度相同，导致每一个数据的查询效率相当。
+
+
+
+## **聚集索引和非聚集索引**
+
+
+
+1. 聚集索引即索引结构和数据一起存放的索引。主键索引属于聚集索引。
+
+2. 非聚集索引即索引结构和数据分开存放的索引。
+
+
+
+## 覆盖索引
+
+覆盖索引即需要查询的字段正好是索引的字段，那么直接根据该索引，就可以查到数据了， 而无需回表查询。
+
+
+
+### 数据库的主从复制
+
+主从复制是指数据可以从一个MySQL数据库服务器主节点复制到一个或多个从节点。
+
+主要涉及三个线程：binlog 线程、I/O 线程和 SQL 线程。
+
+- **binlog 线程** ：负责将主服务器上的数据更改写入二进制日志（Binary log）中。
+- **I/O 线程** ：负责从主服务器上读取二进制日志，并写入从服务器的**中继日志**（Relay log）。
+- **SQL 线程** ：负责读取中继日志，解析出主服务器已经执行的数据更改并在从服务器中重放（Replay）。
+
+
+
+### 数据库的读写分离
+
+- 主服务器处理写操作以及实时性要求比较高的读操作，而从服务器处理读操作。
+- 读写分离常用代理方式来实现，代理服务器接收应用层传来的读写请求，然后决定转发到哪个服务器。
+
+
 
 ## 数据库范式
 - 1NF(第一范式)
