--- a/notes/设计模式.md
+++ b/notes/设计模式.md
@@ -2,15 +2,61 @@
 
 
 
-创建者模式
+[菜鸟教程设计模式link](https://www.runoob.com/design-pattern)
 
-⼯⼚⽅法模式 、 抽象⼯⼚模式 、 ⽣成器模式 和 原型模式 单例模式
+23种设计模式
+
+6大设计原则
 
 
 
-## 单例模式
+**工厂模式**
 
-使用场景
+其在父类中提供⼀个创建对象的⽅法（子类实现接口的具体实现方法）， 允许⼦类决定实例化对象的类型。
+
+
+
+**抽象工厂模式**
+
+提供一个创建一系列相关或相互依赖对象的接口，而无需指定它们具体的类。
+
+
+
+**原型模式**
+
+用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象。
+
+例如 JAVA 中的 Object clone() 方法
+
+
+
+**适配器模式**
+
+将一个类的接口转换成客户希望的另外一个接口，使得原本由于接口不兼容而不能一起工作的那些类能一起工作。
+
+
+
+**装饰器模式**
+
+装饰器模式（Decorator Pattern）允许向一个现有的对象添加新的功能，同时又不改变其结构，就是创建了一个装饰类，用来包装原有的类，提供额外的功能。
+
+
+
+**模板模式**
+
+在模板模式（Template Pattern）中，一个抽象类公开定义了执行它的方法的方式/模板。它的子类可以按需要重写方法实现，但调用将以抽象类中定义的方式进行
+
+就是子类重写抽象类定义的模板方法，调用的时候以抽象类定义的方法就行调用 执行方法按具体实例类执行
+
+
+
+**单例模式**
+
+实现方式：
+
+懒汉（实例变量 在get实例方法初始化）、饿汉（定义静态实例变量就初始化了）、静态类、类的内部类、双重锁校验、串⾏化等
+
+使用场景：
 
 1. 数据库的连接池不会反复创建
 
@@ -20,15 +66,76 @@
 
 **7种单例模式实现**
 
-**静态类使用**
+-  **1 静态类使用**
 
-**懒汉模式**
+  ![image-20220227112529740](设计模式/image-20220227112529740.png)
 
-- 线程安全和非线程安全 是否在获取实力的静态方法中加锁
+- **2 懒汉模式**
+  - 分线程安全和非线程安全 是否在获取实例的静态方法中加锁
 
-![image-20220225105217679](C:\Users\Xiangzi\AppData\Roaming\Typora\typora-user-images\image-20220225105217679.png)
+![image-20220227112643077](设计模式/image-20220227112643077.png)
+
+- **3 饿汉模式**（线程安全）
+
+![image-20220227112651776](设计模式/image-20220227112651776.png)
+
+- **4 双重锁校验**(线程安全)
+
+![image-20220227112714740](设计模式/image-20220227112714740.png)
+
+**这里面试官可能会问使用volatile的好处？**
+
+Instance 采用 volatile 关键字修饰也是很有必要的， `Instance = new Singleton();` 这段代码其实是分为三步执行：
+
+1. 为 uniqueInstance 分配内存空间 
+2. 初始化 uniqueInstance 
+3. 将 uniqueInstance 指向分配的内存地址 
+
+但是由于 JVM 具有指令重排的特性，执行顺序有可能变成 1>3>2。指令重排在单线程环境下不会出现问题，但是在多线程环境下会导致一个线程获得还没有初始化的实例。例如，线程 T1 执行了 1 和 3，此时 T2 调用 geteInstance() 后发现 Instance 不为空，因此返回 Instance，但此时 Instance 还未被初始化。
+
+**使用 volatile 可以禁止 JVM 的指令重排，保证在多线程环境下也能正常运行。**
 
 
 
+- **5 使⽤类的内部类**(线程安全)
+
+既保证了线程安全有保证了懒加载，同时不会因为加锁的⽅式耗费性能。⾮常推荐使⽤的⼀种单例模式
 
 
+
+- **6 CASAtomicReference**(线程安全)
+
+  AtomicReference 可以封装引⽤⼀个V实例，⽀持并发访问
+
+- **7 串行化 使⽤枚举**的⽅式解决单例模式
+
+
+
+## 在Spring框架中都用到了哪些设计模式
+
+在问Spring的时候可能会问到这样一个问题：**在Spring框架中都用到了哪些设计模式，并举例说明？**
+
+- 工厂设计模式 : Spring使用工厂模式通过 `BeanFactory`、`ApplicationContext` 创建 bean 对象。 
+- 代理设计模式 : Spring AOP 功能的实现。 
+- 单例设计模式: Spring 中的 Bean 默认都是单例的。 
+- 装饰器设计模式 : 我们的项目需要连接多个数据库，而且不同的客户在每次访问中根据需要会去访问不同的数据库。这种模式让我们可以根据客户的需求能够动态切换不同的数据源。 
+- 观察者模式: Spring 事件驱动模型就是观察者模式很经典的一个应用。 
+- 适配器模式: Spring AOP 的增强或通知(Advice)使用到了适配器模式、spring MVC 中也是用到了适配器模式适配`Controller`。
+
+
+
+## 六大设计原则：
+
+回答：设计模式共有六大原则，分别是：单一职责原则、开闭原则、里氏代换原则、依赖倒转原则、接口隔离原则、迪米特法则。
+
+**单一职责**：一个类只负责一个功能领域中相应的职责，或者可以定义为：就一个类而言，应该只有一个引起它变化的原因。
+
+**开闭原则**：软件实体应该对扩展开放，对修改关闭。其含义是说一个软件实体应该通过扩展来实现变化，而不是通过修改已有的代码来实现变化。
+
+**里氏代换原则**：通俗点讲，只要父类能出现的地方子类就可以出现，而且替换为子类也不会产生任何错误或异常，使用者可能根本就不需要知道是父类还是子类。但是，反过来就不行了，有子类出现的地方，父类未必就能适应。
+
+**依赖倒转原则**：这个是开闭原则的基础，具体内容：真对接口编程，依赖于抽象而不依赖于具体。
+
+**接口隔离原则**：使用多个隔离的接口，比使用单个接口要好。还是一个降低类之间的耦合度的意思，从这儿我们看出，其实设计模式就是一个软件的设计思想，从大型软件架构出发，为了升级和维护方便。所以上文中多次出现：降低依赖，降低耦合。
+
+**迪米特法则**：为什么叫最少知道原则，就是说：一个实体应当尽量少的与其他实体之间发生相互作用，使得系统功能模块相对独立。
