--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -133,20 +133,54 @@ latch锁：一般称为轻量级锁，要求锁定的时间必须非常短，在
 - 意向锁属于表级别的锁，又可以分为意向共享锁(IS Lock)和意向排他锁(IX Lock)。
 	- 意向共享锁(IS Lock)：事务想要获得一张表中某几行的共享锁。
 	- 意向排他锁(IX Lock)：事务想要获得一张表中某几行的排他锁。
-
 - 一致性非锁定读：指InnoDB存储引擎通过多版本控制的方式来读取当前执行时间数据库中行的数据。如果读取的行正在执行DELETE或UPDATE操作，这时读取操作不会因此等待行上锁的释放，相反的，InnoDB存储引擎会读取一个快照数据。
-
 - 一致性锁定读：InnoDB存储引擎对于SELECT语句支持两种一致性锁定读的操作：
 select ... for update和select ... lock in share mode。
 
-## 什么是MVCC？
-MVCC实现原理【MVCC多版本并发控制，指的是一种提高并发的技术。】
-Multi-Version Concurrency Control。
-最早的数据库系统，只有读读之间可以并发，读写，写读，写写都要阻塞。引入多版本之后，只有写写之间相互阻塞，其他三种操作都可以并行，这样大幅度提高了InnoDB的并发度。
 
-同一条记录在系统中可以存在多个版本，就是数据库的多版本并发控制（MVCC）。每次事务更新数据的时候，会给行数据生成新的版本，每个版本都有自己的row trx_id，表示更新的事务ID（随时间单调递增）。
 
-## MVCC能解决什么问题
+
+
+### MVCC是什么
+
+MVCC的目的就是多版本并发控制，在数据库中的实现，就是为了解决`读写冲突`，它的实现原理主要是依赖记录中的 `3个隐式字段`，`undo日志` ，`Read View` 来实现的。
+
+
+
+#### 隐式字段
+
+每行记录除了我们自定义的字段外，还有数据库隐式定义的`DB_TRX_ID`,`DB_ROLL_PTR`,`DB_ROW_ID`等字段
+
+- `DB_TRX_ID`
+  6byte，最近修改(`修改/插入`)事务ID：记录创建这条记录/最后一次修改该记录的事务ID
+- `DB_ROLL_PTR`
+  7byte，回滚指针，指向这条记录的上一个版本（存储于rollback segment里）
+- `DB_ROW_ID`
+  6byte，隐含的自增ID（隐藏主键），如果数据表没有主键，InnoDB会自动以`DB_ROW_ID`产生一个聚簇索引
+- 实际还有一个删除flag隐藏字段, 既记录被更新或删除并不代表真的删除，而是删除flag变了
+
+
+
+#### undo日志
+
+undo log主要分为两种：
+
+- insert undo log
+  代表事务在`insert`新记录时产生的`undo log`, 只在事务回滚时需要，并且在事务提交后可以被立即丢弃
+- update undo log
+  事务在进行`update`或`delete`时产生的`undo log`; 不仅在事务回滚时需要，在快照读时也需要；所以不能随便删除，只有在快速读或事务回滚不涉及该日志时，对应的日志才会被`purge`线程统一清除
+
+
+
+## Read View
+
+Read View就是事务进行`快照读`操作的时候生产的`读视图`(Read View)，在该事务执行的快照读的那一刻，会生成数据库系统当前的一个快照，记录并维护系统当前活跃事务的ID
+
+`Read View`遵循一个可见性算法，主要是将`要被修改的数据`的最新记录中的`DB_TRX_ID`（即当前事务ID）取出来，与系统当前其他活跃事务的ID去对比
+
+
+
+## 能解决什么问题
 
 数据库并发场景有三种，分别为：
 读-读：不存在任何问题，也不需要并发控制
@@ -168,10 +202,13 @@ MVCC可以为数据库解决以下问题
 
 - InnoDB存储引擎在数据库每行数据的后面添加了三个字段, 不是两个!!
 
-
 InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 分别是事务ID、回滚指针和
 6字节的DB_ROW_ID字段: 包含一个随着新行插入而单调递增的行ID, 当由innodb自动产生聚集索引时，聚集索引会包括这个行ID的值，否则这个行ID不会出现在任何索引中。
+
+
+
+
 
 
 #### MyISAM和InnoDB区别
