--- a/notes/英文面试准备.md
+++ b/notes/英文面试准备.md
@@ -35,15 +35,17 @@ The agent module reads log files in real time and sends them to Kafka;
 Yes I use Kafka cluster as message queue to store log data temporarily,
 The transfer module asynchronously reads log data from the Kafka cluster
 
-A more important function in the project is that I use etcd to manage the configuration information of the log collection task. etcd is a key-value database. It monitors the changes of key values in the database, dynamically updates the configuration information of the log collection project, and updates the agent and transfer modules in real time. , to achieve hot loading
+A more important function in the project is that I use etcd to manage the configuration information of the log collection task. etcd is a key-value database. It monitors the changes of key values in the database, dynamically updates the configuration information of the log collection project, and updates the agent and transfer modules in real time. , to achieve hot loading.
 
-This feature is very important in the project
+This feature is very important in the project.
 
 Finally, that's all for my introduction to this log collection project. If the interviewer has any questions about this project, please ask me.
 
 
 
 模块
+
+不用 简历没写
 
 在线社交网络分析系统项目 
 
