--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -14,20 +14,21 @@
 
 **持久性** 事务发生了，对数据库的影响是持久的，不会回滚。
 
+MySQL InnoDB 引擎使用 **redo log(重做日志)** 保证事务的**持久性**，使用 **undo log(回滚日志)** 来保证事务的**原子性**。
 
-下面这段话摘自《MySQL技术内幕-InnoDB存储引擎》
+`MySQL`数据库的**数据备份、主备、主主、主从**都离不开`binlog`，需要依靠`binlog`来同步数据，保证数据一致性。
 
-原子性、一致性和持久性是通过数据库的redo log和undo log来完成。redo log称为重做日志，用来保证事务的原子性和持久性。undo log用来保证事务的一致性。而隔离性是通过锁实现的。【具体大家看书吧，书上比较详细。】
+
 
 ## Mysql三大日志
 二进制日志 binlog（归档日志）和事务日志 redo log（重做日志）和 undo log（回滚日志）
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/f9393edb5d9a470599eae5ffd5d7ef9d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
 ## 面试官可能会问三种日志的区别和作用。
-redo log：恢复提交事务修改的页操作；通常是物理日志，记录的是页的物理修改操作。
+redo log：恢复提交事务修改的页操作；通常是物理日志，记录的是页的物理修改操作。保证持久性
 
-uodo log：回滚记录到某个特定版本；通常是逻辑日志，根据每行记录进行记录。
+undo log：回滚记录到某个特定版本；通常是逻辑日志，根据每行记录进行记录。 保证原子性
 
-bin log：用来进行Point-In-Time(PIT)的恢复及主从复制环境的建立。
+bin log：用来进行Point-In-Time(PIT)的恢复及主从复制环境的建立。保证一致性
 
 ## 什么是undo_log? undo_log用于哪些场景？
 
