--- a/notes/计算机网络面经.md
+++ b/notes/计算机网络面经.md
@@ -687,6 +687,8 @@ TCP首部开销20字节；UDP的首部开销小，只有8个字节。
 
 ## TCP 协议如何保证可靠传输
 
+记住这个
+
 **检验和 流量控制 拥塞控制 超时传输**
 
 1. 应用数据被分割成 TCP 认为最适合发送的数据块。
@@ -706,7 +708,10 @@ TCP的拥塞控制采用了四种算法，即**慢开始**、**拥塞避免**、
 1. **ARQ协议**：也是为了实现可靠传输的，它的基本原理就是每发完一个分组就停止发送，等待对方确认。在收到确认后再发下一个分组。
 2. **超时重传**：当 TCP 发出一个段后，它启动一个定时器，等待目的端确认收到这个报文段。如果不能及时收到一个确认，将重发这个报文段。
 
-### 记这个答案：
+
+
+详细版
+
 答：首先可靠传输的基础是滑动窗口协议，配合着一些其他的控制来使得整个传输过程可靠。这些控制我觉得可以按分为三部分去解释，一个是基本的控制、一个是发送端的控制、一个是接收端的控制。
 
 1. 首先详细说一下滑动窗口协议：
@@ -787,14 +792,14 @@ https://blog.csdn.net/plokmju88/article/details/103884145
     当服务器把剩下的消息发完之后，会发送一个 带 FIN 标志位的关闭连接请求给客户端，进入LAST-ACK阶段。
     客户端收到该请求后，发出 ACK 确认，并进入最后的 TIME - WAIT 状态，等待 2MSL（最大报文存活时间） 后释放连接。
     B 收到确认后，释放连接。
-
-  
+    
+    
 
   先不要提前说 等面试官问
 
   如果在等待2MSL时间内，服务端没有受到客户端发来的ACK接受到的报文响应，服务端就会重新发来一个带FIN标志的关闭连接的请求
 
-  
+
 
 2. 四次挥手的原因
 
