--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -286,11 +286,21 @@ V：对信号量执行加 1 操作，并唤醒正在 waiting 的进程
 ### 如何避免死锁的发生 死锁预防
 - **死锁预防**：从形成死锁的条件入手，基本思想就是打破形成死锁的四个条件中的一个或多个，保证系统不会进入死锁状态。
 	- 破坏互斥条件：比如只读文件、磁盘等软硬件资源可采用这种办法处理。
-	- 破坏占有和等待条件：在进程开始执行之前，就把其要申请的所有资源全部分配给他，直到所有资源都满足，才开始执行。
-	- 破坏不剥夺条件：允许进程强行从资源占有者那里夺取某些资源
-	- 破坏环路等待条件：给系统的所有资源编号，规定进程请求所需资源的顺序必须按照资源的编号依次执行。
-
+	- 破坏占有和等待条件：**在进程开始执行之前，就把其要申请的所有资源全部分配给他，直到所有资源都满足，才开始执行**。
+	- 破坏不剥夺条件：**允许进程强行从资源占有者那里夺取某些资源**
+	- 破坏环路等待条件：**给系统的所有资源编号，规定进程请求所需资源的顺序必须按照资源的编号依次执行**。
 - 银行家算法 **死锁避免**
+
+
+
+## 怎么避免死锁：
+
+- **在进程开始执行之前，就把其要申请的所有资源全部分配给他，直到所有资源都满足，才开始执行**。
+- **允许进程强行从资源占有者那里夺取某些资源**
+- **给系统的所有资源编号，规定进程请求所需资源的顺序必须按照资源的编号依次执行**
+- **银行家算法**
+
+
 
 ### 如果发生死锁了怎么办 死锁检测与恢复
 - **死锁检测**：发生死锁之前总归需要先检测到死锁吧，不然怎么进行接下来的操作？可以通过检测有向图中是否存在环来检测，从一个节点出发进行 dfs，对访问过的节点进行标记，如果访问到了已经标记的节点，就表示有向图存在环，也就是检测到死锁的发生。
@@ -599,4 +609,35 @@ poll 没有最大描述符数量的限制，如果平台支持并且对实时性
 
 因为考虑了移动方向，因此所有的磁盘请求都会被满足，解决了 SSTF 的饥饿问题。
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/08659c43f70043619b41a815519781bc.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
+
+
+
+
+
+## Socket通信模型：
+
+[socket通信模型](https://segmentfault.com/a/1190000013712747)
+
+![img](https://img-blog.csdn.net/20170204101604614?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvRXJpY19sZXk=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
+
+##### TCP三次握手的Socket过程：
+
+![img](https://segmentfault.com/img/bV5Hak?w=416&h=209)
+
+1. 服务器调用 `socket()`、 `bind()`(绑定socket和端口号)、 `listen()`（监听端口号）完成初始化后，调用 `accept()`（接受来自客户端的连接请求）阻塞等待；
+2. 客户端Socket对象调用 `connect()`向服务器发送了一个SYN并阻塞；
+3. 服务器完成了第一次握手，即发送SYN和ACK应答；
+4. 客户端收到服务端发送的应答之后，从 `connect()`返回，再发送一个ACK给服务器；
+5. 服务器Socket对象接收客户端第三次握手ACK确认，此时服务端从 `accept()`返回，建立连接。
+
+
+
+##### TCP四次挥手的Socket过程：
+
+![img](https://segmentfault.com/img/bV5Hav?w=346&h=209)
+
+1. 某个应用进程调用 `close()`主动关闭，发送一个FIN；
+2. 另一端接收到FIN后被动执行关闭，并发送ACK确认；
+3. 之后被动执行关闭的应用进程调用 `close()`关闭Socket，并也发送一个FIN；
+4. 接收到这个FIN的一端向另一端ACK确认。
 
