--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -425,19 +425,21 @@ https://www.nowcoder.com/discuss/810741?channel=-1&source_id=profile_follow_post
 	- 程序可以使用虚拟地址来访问大于可用物理内存的内存缓冲区间。当物理内存不足时，		可以将物理内存页保存到磁盘中。数据和代码页可以根据需要在物理内存和磁盘间移动
 	- 不同进程间的虚拟地址彼此隔离。因此不同的进程无法干涉彼此正在使用的物理内存
 
-## 什么是虚拟内存？
-- 虚拟内存是计算机系统提供的一种内存管理技术
-- 它给每个进程提供了一连续的虚拟地址空间，使得每一个进程具有独占主存的错觉，通过将内存扩展到硬盘空间，让程序可以拥有超过系统物理内存大小的可用内存空间==
-- 它定义了一个连续的虚拟地址空间，并且把内存扩展到了硬盘空间
-- 虚拟内存允许程序不用将地址空间中的每一页都映射到物理内存，也就是说一个程序不需要全部调入内存就可以运行，这使得有限的内存运行大程序成为可能
-	- 对于没有映射到物理内存的页，可以在使用的时候将其装入物理内存
-- 虚拟内存是计算机系统提供的一种内存管理技术，它给每个进程提供了一个一致的、私有的、连续的地址空间，把内存扩展到了硬盘空间，让程序可以拥有超过物理内存大小的内存空间
 
-**另一个版本**
-- why? 传统的内存管理必须把作业一次性的 load 到内存中，并且一直驻留到其作业运行结束，当作业很大时，是没有办法一次性装入内存的。
-- how? 而在一段时间内，只需要访问小部分数据就可以保证程序的正常运行。所以基于局部性原理，在程序加载的时候，把很快就会用到的部分放入内存中，暂时用不到的部分留在磁盘上。在程序执行的过程中，当信息不在内存时，再从外存把信息加载到内存里。当内存不够的时候，根据一些策略把用不到的内存换出到外存中，从而腾出空间给要调入内存的信息。而在 os 的管理下，让应用程序认为自己拥有一连续可用的内存，产生独享主存的错觉，这就是虚拟内存。
+
+记住这个版本
+
+## 什么是虚拟内存？
+- 虚拟内存是计算机系统提供的一种内存管理技术，它给每个进程提供了一个一致的、私有的、**连续**的地址空间，把内存扩展到了硬盘空间，让程序可以拥有超过物理内存大小的内存空间。
+- 它定义了一个连续的虚拟地址空间，从而给每个进程提供了一连续的虚拟地址空间，将内存扩展到硬盘空间，让程序可以拥有超过系统物理内存大小的可用内存空间。
+- 虚拟内存允许程序不用将地址空间中的每一页都映射到物理内存，也就是说一个程序不需要全部调入内存就可以运行，这使得有限的内存运行大程序成为可能，对于没有映射到物理内存的页，可以在使用的时候通过内存置换算法将其装入物理内存
 
 其实虚拟内存的基础是局部性原理，也正是因为有局部性原理，程序运行时才可以做到只装入部分到内存就可以运行。
+
+另一个理解版本
+
+- why? 传统的内存管理必须把作业一次性的 load 到内存中，并且一直驻留到其作业运行结束，当作业很大时，是没有办法一次性装入内存的。
+- how? 而在一段时间内，只需要访问小部分数据就可以保证程序的正常运行。所以基于局部性原理，在程序加载的时候，把很快就会用到的部分放入内存中，暂时用不到的部分留在磁盘上。在程序执行的过程中，当信息不在内存时，再从外存把信息加载到内存里。当内存不够的时候，根据一些策略把用不到的内存换出到外存中，从而腾出空间给要调入内存的信息。而在 os 的管理下，让应用程序认为自己拥有一连续可用的内存，产生独享主存的错觉，这就是虚拟内存。
 
 ## 局部性原理了解吗？
 - 在某个较短的时间内，程序执行局限于某一小部分，程序访问的存储空间也局限于某个区域
@@ -447,8 +449,10 @@ https://www.nowcoder.com/discuss/810741?channel=-1&source_id=profile_follow_post
 - 时间局部性通过将近来使用的指令和数据存储在高速缓存中，并且使用高速缓存的层次结构来实现。空间局部性则使用较大的高速缓存并通过预取机制集成到高速缓存中实现。
 - 利用局部性原理来实现高速缓存
 
-## 虚拟内存的三种技术实现方式
-虚拟内存的实现需要基于离散分配的内存管理方式的基础上
+
+
+## 虚拟内存的三种技术实现方式（重要）
+**虚拟内存的实现需要基于离散分配的内存管理方式的基础上**
 
 - 1 请求分页存储管理
 	- 在分页管理基础上，添加了请求调页功能和页面置换功能
