--- a/notes/计算机网络面经.md
+++ b/notes/计算机网络面经.md
@@ -847,9 +847,9 @@ https://blog.csdn.net/plokmju88/article/details/103884145
     客户端收到 ACK 之后，进入 FIN - WAIT - 2 阶段，此时处于半关闭状态，**服务器能给客户端发消息，但客户端不能给服务器发消息**。
     当服务器把剩下的消息发完之后，会发送一个 带 FIN 标志位的关闭连接请求给客户端，进入LAST-ACK阶段。
     客户端收到该请求后，发出 ACK 确认，并进入最后的 TIME - WAIT 状态，等待 2MSL（最大报文存活时间） 后释放连接。
-    B 收到确认后，释放连接。
-    
-    
+    B 收到ACK确认后，释放连接。
+
+
 
   先不要提前说 等面试官问
 
@@ -865,7 +865,7 @@ https://blog.csdn.net/plokmju88/article/details/103884145
 
 3. 为什么客户端要等待 2MSL 后再释放连接
     第一个角度：确保最后一个确认报文能到达，如果服务器没收到来自客户端的 ACK 报文，就会重新发送 FIN 报文到客户端，客户端等待一段时间就是为了处理这种延迟的情况。
-    第二个角度：等待一段时间是为了让本连接持续的时间内所有报文从网络中消失，使得下一个新连接里不会出现旧的报文。
+    **第二个角度：等待一段时间是为了让本连接持续的时间内所有报文从网络中消失，使得下一个新连接里不会出现旧的报文。**
 
 4. 为什么是两个最大报文存活时间，不是三个？
 
@@ -981,10 +981,3 @@ CSMA PPP
 在传输媒体上进行传输比特流。
 为上层提供服务：尽可能为数据链路层屏蔽传输媒体和通信手段的差异，把帧拆分成比特流在传输媒介上进行传输。
 时分复用、频分、码分多址、波分复用等！
-
-
-
-
-
-
-
