--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -1,4 +1,4 @@
-﻿## Mysql 查询语句练习
+## Mysql 查询语句练习
 链接: [link](http://www.cyc2018.xyz/%E6%95%B0%E6%8D%AE%E5%BA%93/SQL%20%E7%BB%83%E4%B9%A0.html#description-7).
 
 ## 什么是事务
@@ -21,6 +21,7 @@ MySQL InnoDB 引擎使用 **redo log(重做日志)** 保证事务的**持久性*
 
 
 ## Mysql三大日志
+
 二进制日志 binlog（归档日志）和事务日志 redo log（重做日志）和 undo log（回滚日志）
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/f9393edb5d9a470599eae5ffd5d7ef9d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_20,color_FFFFFF,t_70,g_se,x_16)
 ## 面试官可能会问三种日志的区别和作用。
@@ -126,7 +127,10 @@ latch锁：一般称为轻量级锁，要求锁定的时间必须非常短，在
 
 至于InnoDB为什么选用可重复读，我的个人理解是：在InnoDB存储引擎中，使用可重复读可以解决脏读、不可重复读，而幻读也有可能发生，但是是可以避免的，通过加Next-Key Lock锁可以解决幻读问题。并且并非隔离级别越高越好，隔离级别越高的话，并发性能越低，所以在实际的开发中，需要根据业务场景进行选择事务的隔离级别。
 
+
+
 ## InnoDB存储引擎中的锁都有哪些类型？
+
 可以分为共享锁、排他锁、意向锁、一致性非锁定读和一致性锁定读。
 其中共享锁和排他锁均属于行级锁。
 
@@ -146,17 +150,37 @@ latch锁：一般称为轻量级锁，要求锁定的时间必须非常短，在
 
 
 
-
-
 ### MVCC是什么
 
-MVCC的目的就是多版本并发控制，在数据库中的实现，就是为了解决`读写冲突`，它的实现原理主要是依赖记录中的**3个隐式字段，undo日志 ，Read View**(快照)来实现的。
+MVCC的目的就是多版本并发控制，mvcc多版本控制用于实现事务的隔离级别，用于在不加锁的情况下解决数据库读写冲突问题，在大多数情况下代替行级锁。
+
+MVCC模型在MySQL中的具体实现则是由 **3个隐式字段**，**undo日志** ，**Read View** 等去完成的
+
+
+
+`undo log`会记录事务前老版本数据，然后行记录中回滚指针会指向老版本位置
+
+`Read View` 就是事务进行`快照读`操作的时候生产的`读视图`(Read View)，在该事务执行的快照读的那一刻，会生成数据库系统当前的一个快照，记录并维护系统当前活跃事务的 ID
+
+
+
+同时还可以解决脏读，幻读，不可重复读等事务隔离问题，但不能解决更新丢失问题
+
+MVCC只在**读取已提交和可重复读**两种隔离级别下有作用
+
+
+
+读已提交隔离级别下，会在每次快照读（查询）都生成一个`Read View`
+
+可重复读只在事务开始时生成一个`Read View`，以后每次查询都用这个`Read View`，以此实现不同隔离级别。
 
 
 
 #### 隐式字段
 
-每行记录除了我们自定义的字段外，还有数据库隐式定义的`DB_TRX_ID`,`DB_ROLL_PTR`,`DB_ROW_ID`等字段
+每行记录除了我们自定义的字段外，还有在数据库的每一行中，额外添加三个字段：`DB_TRX_ID`,`DB_ROLL_PTR`,`DB_ROW_ID`等字段
+
+![img](https://uploadfiles.nowcoder.com/images/20220122/534718694_1642832044029_58B41C1B79EFF230246C86CA6755A415)
 
 - `DB_TRX_ID`
   6byte，最近修改(`修改/插入`)事务ID：记录创建这条记录/最后一次修改该记录的事务ID
@@ -194,12 +218,15 @@ Read View就是事务进行**快照读**操作的时候生产的`读视图`(Read
 读-写：有线程安全问题，可能会造成事务隔离性问题，可能遇到脏读，幻读，不可重复读
 写-写：有线程安全问题，可能会存在更新丢失问题，比如第一类更新丢失，第二类更新丢失
 
+
+
 ## MVCC带来的好处
+
 MVCC可以为数据库解决以下问题
 
 - 在并发读写数据库时，可以做到在读操作时不用阻塞写操作，写操作也不用阻塞读操作，提高了数据库并发读写的性能
 - 同时还可以解决脏读，幻读，不可重复读等事务隔离问题，但不能解决更新丢失问题
-- MVCC只在读取已提交和可重复 读两种隔离级别下有作用
+- MVCC只在**读取已提交和可重复读**两种隔离级别下有作用
 
 - MVCC常见的实现方式乐观锁和悲观锁
 
@@ -208,6 +235,8 @@ MVCC可以为数据库解决以下问题
 - 应对高并发事务, MVCC比单纯的加锁更高效;
 
 - InnoDB存储引擎在数据库每行数据的后面添加了三个字段, 不是两个!!
+
+
 
 InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 分别是事务ID、回滚指针和
