--- a/notes/数据结构.md
+++ b/notes/数据结构.md
@@ -1,5 +1,13 @@
 # 树
 
+
+
+**平衡树**
+
+
+
+
+
 **二叉树**
 
 **二叉搜索树（二叉查找树）**
@@ -37,12 +45,16 @@
 
 - 任意节点到每个叶子节点的所有路劲包含相同数目的黑色节点
   
-  ![](C:\Users\祥仔\AppData\Roaming\marktext\images\2019-09-01-13-38-13-image.png)
   
+  
+  
+  
+  
+
   # B树
   
   **节点信息**
-
+  
 - 本结点所含关键字的个数
 
 - 指向父结点的指针
@@ -99,13 +111,13 @@
 
 三阶B+树
 
-![](C:\Users\祥仔\AppData\Roaming\marktext\images\2019-09-01-14-21-01-image.png)
+
 
 # B*树：
 
 ## 是B+树的变体，在B+树的非根和非叶子结点再增加指向兄弟的指针；
 
-![](C:\Users\祥仔\AppData\Roaming\marktext\images\2019-09-01-14-41-39-image.png)
+
 
 ## B*树定义了非叶子结点关键字个数至少为(2/3)*M，即块的最低使用率为2/3
 
@@ -132,6 +144,10 @@
 在B+树基础上，为非叶子结点也增加链表指针，将结点的最低利用率
 
 从1/2提高到2/3；
+
+
+
+
 
 # 解决Hash冲突
 
