--- a/notes/计算机网络面经.md
+++ b/notes/计算机网络面经.md
@@ -1,4 +1,45 @@
-﻿[参考](https://www.nowcoder.com/discuss/826919 channel=-1&source_id=discuss_terminal_discuss_sim_nctrack&ncTraceId=48d6da80779b4df6bae307a8fc32418f.228.16449002695229979)
+[参考](https://www.nowcoder.com/discuss/826919 channel=-1&source_id=discuss_terminal_discuss_sim_nctrack&ncTraceId=48d6da80779b4df6bae307a8fc32418f.228.16449002695229979)
+
+
+
+OSI七层协议
+
+​	应用层（Application Layer）
+
+为应用程序间提供通信和交互的协议。
+应用层协议定义的是应用进程（进程：主机中正在运行的程序）间的通信和交互的规则
+
+​	表示层（Presentation Layer）
+
+**表示层对上层数据或信息进行变换以保证一个主机应用层信息可以被另一个主机的应用程序理解**。表示层的数据转换包括数据的加密、压缩、格式转换等。　　表示层协议的代表包括：ASCII、ASN.1、JPEG、MPEG等。
+
+会话层（Session Layer）
+
+**会话层管理主机之间的会话进程，即负责建立、管理、终止进程之间的会话。**会话层还利用在数据中插入校验点来实现数据的同步。　　会话层协议的代表包括：NetBIOS、ZIP（AppleTalk区域信息协议）等。、
+
+​	传输层
+
+为两台主机中的进程间提供通用的数据传输服务。
+为上层提供服务：把应用层的报文封装成 TCP 的报文段或 UDP 的用户数据报进行传送。
+
+​	网络层
+
+为两台主机提供通信服务。
+为上层提供服务：把运输层产生的报文段或用户数据报封装成 IP 数据报进行传送。
+
+​	数据链路层
+
+还是为两台主机之间的数据传输提供服务，两台主机之间的传输，总是在一段一段的链路上传送的，就需要链路层的协议。
+为上层提供服务：把 IP 数据报封装成帧，在链路上进行传递。
+CSMA PPP
+
+​	物理层
+
+在传输媒体上进行传输比特流。
+为上层提供服务：尽可能为数据链路层屏蔽传输媒体和通信手段的差异，把帧拆分成比特流在传输媒介上进行传输。
+时分复用、频分、码分多址、波分复用等！
+
+​	
 
 ## 网络分层结构
 横向看（为哪两个平行的东西提供服务）
