--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -20,6 +20,16 @@ MySQL InnoDB 引擎使用 **redo log(重做日志)** 保证事务的**持久性*
 
 
 
+## 持久性是通过什么实现的
+
+https://www.jb51.net/article/204972.htm
+
+为了提高性能，和数据页类似，redo log 也包括两部分：一是内存中的日志缓冲(redo log buffer)，该部分日志是易失性的；二是磁盘上的重做日志文件(redo log file)，该部分日志是持久的。redo log是物理日志，记录的是数据库中物理页的情况 。
+
+当数据发生修改时，InnoDB不仅会修改Buffer Pool中的数据，也会在redo log buffer记录这次操作；当事务提交时，会对**redo log buffer进行刷盘，记录到redo log file中**。如果MySQL宕机，重启时可以读取redo log file中的数据，对数据库进行恢复。这样就不需要每次提交事务都实时进行刷脏了。
+
+
+
 ## Mysql三大日志
 
 二进制日志 binlog（归档日志）和事务日志 redo log（重做日志）和 undo log（回滚日志）
@@ -128,16 +138,33 @@ latch锁：一般称为轻量级锁，要求锁定的时间必须非常短，在
 数据库事务的隔离级别有4个，由低到高依次为Read uncommitted 、Read committed 、Repeatable read 、Serializable ，这四个级别可以逐个解决脏读 、不可重复读 、幻读 这几类问题。
 
 - 读未提交（Read Uncommitted）：在事务 A 读取数据时，事务 B 读取和修改数据加了共享锁。这种隔离级别，会导致脏读、不可重复读以及幻读。
-
 - 读提交（Read Committed）：在事务 A 读取数据时增加了共享锁，**一旦读取，立即释放锁**，事务 B 读取修改数据时增加了行级排他锁，直到事务结束才释放锁。也就是说，事务 A 在**读取数据时，事务 B 只能读取数据**，不能修改。当事务 A 读取到数据后，事务 B才能修改。这种隔离级别，可以避免脏读，但依然存在不可重复读以及幻读的问题。
-
 - 可重复读（Repeatable Read）：在事务 A 读取数据时增加了共享锁，**事务结束，才释放锁**，事务 B 读取修改数据时增加了行级排他锁，直到事务结束才释放锁。也就是说，事务A 在**没有结束事务时，事务 B 只能读取数据**，不能修改。当事务 A 结束事务，事务 B 才能修改。这种隔离级别，可以避免脏读、不可重复读，但依然存在幻读的问题。
+- 可序列化（Serializable）：在事务 A 读取数据时增加了表级共享锁，**事务结束，才释放锁，事务 B 读取修改数据时增加了表级排他锁**，直到事务结束才释放锁。可序列化解决了脏读、不可重复读、幻读等问题，但隔离级别越来越高的同时，并发性会越来越低。
 
-- 可序列化（Serializable）：在事务 A 读取数据时增加了共享锁，**事务结束，才释放锁，事务 B 读取修改数据时增加了表级排他锁**，直到事务结束才释放锁。可序列化解决了脏读、不可重复读、幻读等问题，但隔离级别越来越高的同时，并发性会越来越低。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/9c5d1e577b884cf294a7652d3aeb3bac.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_18,color_FFFFFF,t_70,g_se,x_16)
+​    最高隔离级别，不允许事务并发执行，而必须串行化执行，最安全，不可能出现更新、脏读、不可重复读、幻读，但是效率最低。
+
+- ![在这里插入图片描述](https://img-blog.csdnimg.cn/9c5d1e577b884cf294a7652d3aeb3bac.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5Y2O5Y2X5bCP5ZOl,size_18,color_FFFFFF,t_70,g_se,x_16)
 - MySQL InnoDB 存储引擎的默认支持的隔离级别是 REPEATABLE-READ（可重读）
 
 至于InnoDB为什么选用可重复读，我的个人理解是：在InnoDB存储引擎中，使用可重复读可以解决脏读、不可重复读，而幻读也有可能发生，但是是可以避免的，通过加**Next-Key Lock锁（左开右闭）可以解决幻读问题**。并且并非隔离级别越高越好，隔离级别越高的话，并发性能越低，所以在实际的开发中，需要根据业务场景进行选择事务的隔离级别。
+
+
+
+不可重复读对应的是修改，即UPDATE操作。但是可能还会有幻读问题。
+
+因为幻读问题对应的是插入INSERT操作，而不是UPDATE操作。
+
+
+
+数据库默认使用的是可重复读
+是通过MVCC实现的
+
+
+
+可重复读 + 间隙锁 可以解决幻读的情况
+
+就是在要select的字段加间距锁 实现next key lock 不给insert 只能update 这样就可以解决幻读的情况。
 
 
 
@@ -163,6 +190,8 @@ latch锁：一般称为轻量级锁，要求锁定的时间必须非常短，在
 
 
 ### MVCC是什么
+
+https://www.cnblogs.com/xuwc/p/13873611.html
 
 先说这句话
 
@@ -290,6 +319,9 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 以上事务 A 和事务 B 都持有间隙 (4,+∞）的 gap 锁，而接下来的插入操作为了获取到插入意向锁，都在等待对方事务的 gap 锁释放，于是就造成了循环等待，导致死锁。
 
 
+
+
+
 ## 数据库索引
 
 
@@ -405,14 +437,61 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 
 
 1. 聚集索引即索引结构和数据一起存放的索引。主键索引属于聚集索引。
-
 2. 非聚集索引即索引结构和数据分开存放的索引。
+
+
+
+InnoDB聚集索引的叶子节点存储行记录，因此， InnoDB必须要有，且只有一个聚集索引：
+
+（1）如果表定义了主键，则PK就是聚集索引；
+ （2）如果表没有定义主键，则第一个非空唯一索引（not NULL unique）列是聚集索引；
+ （3）否则，InnoDB会创建一个隐藏的row-id作为聚集索引；
+
+
+
+## 数据库的回表查询
+
+select * from user where ID=1;
+
+无需回表，根据主键的查询方式，搜索主键索引，就可以找到相应的记录了。
+
+
+
+select * from user where name='ls';
+
+需要回表，先根据普通索引树找到主键，然后根据主键去主键索引找到完整的记录，进行了两次索引查询。基于非主键索引的查询需要多扫描一棵索引树。
+
+![img](https://upload-images.jianshu.io/upload_images/6271376-fecf9dafcc0598e4.png?imageMogr2/auto-orient/strip|imageView2/2/w/421/format/webp)
+
+
+
+（1）先通过普通索引定位到主键值id=5；
+（2）在通过聚集索引定位到行记录；
+这就是所谓的回表查询，先定位主键值，再定位行记录，它的性能较扫一遍索引树更低。
 
 
 
 ## 覆盖索引
 
 覆盖索引即需要查询的字段正好是索引的字段，那么直接根据该索引，就可以查到数据了， 而无需回表查询。
+
+在一个索引树就可以找到所需要的列数据了。
+
+
+
+使用方法，建立联合索引,将单列索引建立为联合索引
+
+比如
+
+select id,name from user where name='shenjian';
+
+能够命中name索引，索引叶子节点存储了主键id，通过name的索引树即可获取id和name，无需回表，符合索引覆盖，效率较高。
+
+
+
+## 数据库如何建立索引呢
+
+具体查看sql.md文件
 
 
 
