--- a/notes/数据结构.md
+++ b/notes/数据结构.md
@@ -1,10 +1,40 @@
+## 排序
+
+https://www.cnblogs.com/zwtgyh/p/10631760.html
+
+- 稳定排序
+
+冒泡排序 插入排序 归并排序 基数排序
+
+
+
+- 不稳定排序
+
+快速排序 堆排序 希尔排序 选择排序
+
+![image-20220324092559781](数据结构/image-20220324092559781.png)
+
+快速排序最坏的情况是n*n
+
+堆排序 归并排序  最好最坏平均都是 nlogn
+
+
+
+最优的条件下，所以[插入排序](https://so.csdn.net/so/search?q=插入排序&spm=1001.2101.3001.7020)和冒泡排序是最优的为o(n)的复杂度
+
+选择排序的复杂度都为n*n
+
+
+
+- 树的复杂度
+
+![image-20220324091457895](数据结构/image-20220324091457895.png)
+
 # 树
 
 
 
 **平衡树**
-
-
 
 
 
@@ -31,7 +61,9 @@
 **满二叉树**
 
 - 所有**叶子结点**都在**最后一层**。
-- 节点的**总数为2^n-1**（n为树的高度）。
+- 节点的**总数为2^n-1**（n为树的高度）
+
+
 
 **红黑树（Red Black Tree）**
 
@@ -49,10 +81,8 @@
   
   
   
-  
-
   # B树
-  
+
   **节点信息**
   
 - 本结点所含关键字的个数
@@ -144,8 +174,6 @@
 在B+树基础上，为非叶子结点也增加链表指针，将结点的最低利用率
 
 从1/2提高到2/3；
-
-
 
 
 
