--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -420,8 +420,19 @@ https://www.nowcoder.com/discuss/810741?channel=-1&source_id=profile_follow_post
 - 物理地址是指真实内存单元的地址
 
 ## 逻辑地址与物理地址的转换过程？
+
+在计算机上有一个页表（page table），就是映射虚拟内存页到物理内存页的，更确切的说是页号到页帧号的映射
+
 - 内存管理单元(MMU)管理逻辑地址和物理地址的转换，其中页表存储页(逻辑地址空间)和页框(物理内存空间)的映射表
 - 一个虚拟地址分为两个部分，一个部分存储页面号，一部分存储偏移量，两个部分结合，就可以在页表中得到页对应的页框地址
+
+
+
+举个例子，有一个虚拟地址它的页号是4，偏移量是20，那么他的寻址过程是这样的：首先到页表中找到页号4对应的页帧号（比如为8），如果页不在内存中，则用失效机制调入页，接着把页帧号和偏移量传给MMC组成一个物理上真正存在的地址，最后就是访问物理内存的数据了。
+
+
+
+页 页表 页框（或页帧）
 
 
 
