--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -672,6 +672,25 @@ select 可移植性更好，几乎被所有主流平台所支持。
 
 
 
+也要记住这个
+
+select
+**应用程序监视一组文件描述符，等待一个或者多个描述符成为就绪状态，从而完成I/O操作。**
+poll
+poll和select的功能基本相同，但有以下几点实现细节上的区别：
+select会修改描述符，而poll不会
+select默认只能监听少于1024个描述符，如果要监听更多描述符，需要修改FD_SETSIZE参数后重新编译；而poll没有数量限制
+poll提供了更多的事件类型，并且对描述符的重复利用上比select高
+**select和poll速度都比较慢，每次调用都需要将全部Socket从应用进程缓冲区复制到内核缓冲区。几乎所有系统都支持select，但只有比较新的系统支持poll。**
+epoll
+已注册的Socket在内核中会被维护在一颗红黑树上，通过回调函数内核会将I/O准备好的描述符加入到一个链表中管理，调用epoll_create()来新建，epoll_ctl来添加删除，epoll_wait()等待完成的Socket。
+**epoll只需要将Socket从进程缓冲区向内核缓冲区拷贝一次，通过epoll_wait()直接在内核中获取要监控的Socket列表，并且进程不需要通过轮询来获得事件完成的Socket。**
+epoll仅适用于Linux。
+epoll 比 select 和 poll 更加灵活而且没有描述符数量限制。
+epoll 对多线程编程更有友好，一个线程调用了 epoll_wait() 另一个线程关闭了同一个描述符也不会产生像 select 和 poll 的不确定情况。
+
+
+
 ## 磁盘调度算法
 
 1. 先来先服务
