--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -248,9 +248,40 @@ https://www.cnblogs.com/xuwc/p/13873611.html
 
 MVCC模型在MySQL中的具体实现则是由 **3个隐式字段**，**undo日志** ，**Read View** 等去完成的
 
+**三个隐式字段**
+
+- 每行记录除了我们自定义的字段外，还有在数据库的每一行中，额外添加三个字段：`DB_TRX_ID`,`DB_ROLL_PTR`,`DB_ROW_ID`等字段
+
+  ![img](https://uploadfiles.nowcoder.com/images/20220122/534718694_1642832044029_58B41C1B79EFF230246C86CA6755A415)
+
+  - `DB_TRX_ID`
+    6byte，最近修改(`修改/插入`)事务ID：记录创建这条记录/最后一次修改该记录的事务ID
+  - `DB_ROLL_PTR`
+    7byte，回滚指针，指向这条记录的上一个版本（存储于rollback segment里）
+  - `DB_ROW_ID`
+    6byte，隐含的自增ID（隐藏主键），如果数据表没有主键，InnoDB会自动以`DB_ROW_ID`产生一个聚簇索引
+  - 实际还有一个删除flag隐藏字段, 既记录被更新或删除并不代表真的删除，而是删除flag变了
+
+
+
+**undo日志**
+
 `undo log`会记录事务前老版本数据，然后行记录中回滚指针会指向老版本位置
 
+- insert undo log
+  代表事务在`insert`新记录时产生的`undo log`, 只在事务回滚时需要，并且在事务提交后可以被立即丢弃
+- update undo log
+  事务在进行`update`或`delete`时产生的`undo log`; 不仅在事务回滚时需要，在快照读时也需要；所以不能随便删除，只有在快速读或事务回滚不涉及该日志时，对应的日志才会被`purge`线程统一清除
+
+对MVCC有帮助的实质是`update undo log` ，`undo log`实际上就是存在`rollback segment`中旧记录链
+
+
+
+**Read View** 
+
 `Read View` 就是事务进行`快照读`操作的时候生产的`读视图`(Read View)，在该事务执行的快照读的那一刻，会生成数据库系统当前的一个快照，记录并维护系统当前活跃事务的 ID
+
+`Read View`遵循一个可见性算法，主要是将`要被修改的数据`的最新记录中的`DB_TRX_ID`（即当前事务ID）取出来，与系统当前其他活跃事务的ID去对比（由Read View维护）如果`DB_TRX_ID`跟Read View的属性做了某些比较，不符合可见性，那就通过`DB_ROLL_PTR`回滚指针去取出`Undo Log`中的`DB_TRX_ID`再比较，即遍历链表的`DB_TRX_ID`（从链首到链尾，即从最近的一次修改查起），直到找到满足特定条件的`DB_TRX_ID`, 那么这个DB_TRX_ID所在的旧记录就是当前事务能看见的最新`老版本`
 
 
 
@@ -264,40 +295,9 @@ MVCC只在**读取已提交和可重复读**两种隔离级别下有作用
 
 可重复读只在事务开始时生成一个`Read View`，以后每次查询都用这个`Read View`，以此实现不同隔离级别。
 
+总之在RC隔离级别下，是每个快照读都会生成并获取最新的Read View；而在RR隔离级别下，则是同一个事务中的第一个快照读才会创建Read View, 之后的快照读获取的都是同一个Read View。
 
 
-#### 隐式字段
-
-每行记录除了我们自定义的字段外，还有在数据库的每一行中，额外添加三个字段：`DB_TRX_ID`,`DB_ROLL_PTR`,`DB_ROW_ID`等字段
-
-![img](https://uploadfiles.nowcoder.com/images/20220122/534718694_1642832044029_58B41C1B79EFF230246C86CA6755A415)
-
-- `DB_TRX_ID`
-  6byte，最近修改(`修改/插入`)事务ID：记录创建这条记录/最后一次修改该记录的事务ID
-- `DB_ROLL_PTR`
-  7byte，回滚指针，指向这条记录的上一个版本（存储于rollback segment里）
-- `DB_ROW_ID`
-  6byte，隐含的自增ID（隐藏主键），如果数据表没有主键，InnoDB会自动以`DB_ROW_ID`产生一个聚簇索引
-- 实际还有一个删除flag隐藏字段, 既记录被更新或删除并不代表真的删除，而是删除flag变了
-
-
-
-#### undo日志
-
-undo log主要分为两种：
-
-- insert undo log
-  代表事务在`insert`新记录时产生的`undo log`, 只在事务回滚时需要，并且在事务提交后可以被立即丢弃
-- update undo log
-  事务在进行`update`或`delete`时产生的`undo log`; 不仅在事务回滚时需要，在快照读时也需要；所以不能随便删除，只有在快速读或事务回滚不涉及该日志时，对应的日志才会被`purge`线程统一清除
-
-
-
-## Read View
-
-Read View就是事务进行**快照读**操作的时候生产的`读视图`(Read View)，在该事务执行的快照读的那一刻，会生成数据库系统当前的一个**快照**，记录并维护系统当前活跃事务的ID
-
-`Read View`遵循一个可见性算法，主要是将`要被修改的数据`的最新记录中的`DB_TRX_ID`（即当前事务ID）取出来，与系统当前其他活跃事务的ID去对比
 
 
 
@@ -459,9 +459,9 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 
 ### 为什么B+树比B树更适合实现数据库索引？
 
-- 由于B+树的数据都存储在叶子结点中，叶子结点均为索引，方便扫库，只需要扫一遍叶子结点即可，但是B树因为其分支结点同样存储着数据，我们要找到具体的数据，需要进行一次中序遍历按序来扫，所以B+树更加适合在**范围区间查询**的情况，而在数据库中基于范围的查询是非常频繁的，所以通常B+树用于数据库索引。
+- 由于B+树的数据都存储在叶子结点中，非叶子结点均为索引，方便扫库，只需要扫一遍叶子结点即可，但是B树因为其分支结点同样存储着数据，我们要找到具体的数据，需要进行一次中序遍历按序来扫，所以B+树更加适合在**范围区间查询**  的情况，而在数据库中基于范围的查询是非常频繁的，所以通常B+树用于数据库索引。
 
-- B+树的节点只存储索引key值，具体信息的地址存在于叶子节点的地址中。这就使以页为单位的索引中可以存放更多的节点。**减少更多的I/O支出**。
+- B+树的节点只存储索引key值，数据都是存在于叶子节点的。这就使以页为单位的索引中可以存放更多的节点。**在查询过程中能减少更多的I/O支出**。
 
 **解释**：B+树的内部结点并没有指向关键字具体信息的指针，其内部结点比B树小，盘块能容纳的结点中关键字数量更多，一次性读入内存中可以查找的关键字也就越多，相对的，IO读写次数也就降低了。
 
@@ -470,8 +470,6 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 
 
 ## **聚集索引和非聚集索引**
-
-
 
 1. 聚集索引即索引结构和数据一起存放的索引。主键索引属于聚集索引。
 2. 非聚集索引即索引结构和数据分开存放的索引。
@@ -526,13 +524,9 @@ select id,name from user where name='shenjian';
 
 
 
-## 数据库如何建立索引呢
+## 数据库建立索引
 
-具体查看sql.md文件
-
-alter table name add /change/modify 
-
-
+看 sql.md
 
 ### 数据库的主从复制
 
