更新了threadLocal原理

--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -1,8 +1,28 @@
-## 用户态 内核态
+## 用户态 内核态的区别
+
+为什么要有用户态和内核态？
+
+由于需要限制不同的程序之间的访问能力, 防止他们获取别的程序的内存数据, 或者获取外围设备的数据, 并发送到网络, CPU划分出两个权限等级 -- 用户态和内核态。
+
+
+
+内核态：cpu可以访问[内存](https://so.csdn.net/so/search?q=内存&spm=1001.2101.3001.7020)的所有数据，包括外围设备，例如硬盘，网卡，cpu也可以将自己从一个程序切换到另一个程序。
+
+用户态：只能受限的访问内存，且不允许访问外围设备，占用cpu的能力被剥夺，cpu资源可以被其他程序获取。
+
+
+
 根据进程访问资源的特点，我们可以把进程在系统上的运行分为两个级别：
 
-- 用户态(user mode) : 用户态运行的进程可以直接读取用户程序的数据。
-- 系统态(kernel mode):可以简单的理解系统态运行的进程或程序几乎可以访问计算机的任何资源，不受限制。
+- 系统态(也称为管态或核心态)，操作系统在系统态运行——运行操作系统程序
+- 用户态(也称为目态)，应用程序只能在用户态运行——运行用户程序
+
+
+
+- **用户态**切换到**内核态**的**唯一**途径——>**中断/异常/陷入**
+- **内核态**切换到**用户态**的途径——>设置程序状态字
+
+
 
 
 系统调用
@@ -25,66 +45,124 @@
 
 这3种方式是系统在运行时由用户态转到内核态的最主要方式，其中系统调用可以认为是用户进程主动发起的，异常和外围设备中断则是被动的。
 
-## 其他必会知识
+
+
+
+
+## 常识知识
+
 - 并行与并发
 并发：在操作系统中，某一时间段，几个程序在同一个CPU上运行，但在任意一个时间点上，只有一个程序在CPU上运行。
 并行：两个程序在某一时刻同时运行，强调同时发生。
-
 - 阻塞与非阻塞
 阻塞是指调用线程或者进程被操作系统挂起。
 非阻塞是指调用线程或者进程不会被操作系统挂起。
-
 - 同步与异步
 同步与异步同步是阻塞模式，异步是非阻塞模式。
 同步就是指一个进程在执行某个请求的时候，若该请求需要一段时间才能返回信息，那么这个进程将会一直等待下去，知道收到返回信息才继续执行下去；
 异步是指进程不需要一直等下去，而是继续执行下面的操作，不管其他进程的状态。当有消息返回式系统会通知进程进行处理，这样可以提高执行的效率。
 
-## PCB是什么
-**进程控制块 (Process Control Block, PCB) 描述进程的基本信息和运行状态，所谓的创建进程和撤销进程，都是指对PCB 的操作, PCB 是进程存在的唯一标识。**
-- PCB主要包含下面几部分的内容：
-	- 进程的描述信息，比如进程的名称，标识符，
-	- 处理机的状态信息，当程序中断是保留此时的信息，以便 CPU 返回时能从断点执行
-	- 进程调度信息，比如阻塞原因，状态，优先级等等
-	- 进程控制和资源占用，同步通信机制，链接指针（指向队列中下一个进程的 PCB 地址）
-- PCB 的作用
-	- PCB是进程实体的一部分，是操作系统中最重要的数据结构
-	- 由于它的存在，使得多道程序环境下，不能独立运行的程序成为一个能独立运行的基本单位，使得程序可以并发执行
-	- 系统通过 PCB 来感知进程的存在。（换句话说，PCB 是进程存在的唯一标识）
-	- 进程的组成可以用下图来表示，PCB 就是他唯一标识符。
-	![在这里插入图片描述](https://img-blog.csdnimg.cn/53c2941897c2495a89169ea90c285506.png)
 
 
-## 线程、进程、协程的区别
-答：
-- 进程是资源分配的最基本的单位，运行一个程序会创建一个或多个进程，进程就是运行起来的可执行程序。
-- 线程是程序执行的最基本的单位，是轻量级的进程，每个进程里都有一个主线程，且只能有一个，和进程是相互依存的关系，生命周期和进程一样。
-- 协程是用户态的轻量级线程，是线程内部的基本单位。无需线程上下文切换的开销、无需原子操作锁定及同步的开销、方便切换控制流，简化编程模型。
+## 文件
 
-## 进程和线程的区别 关系
+**普通文件** 这种文件包含了某种形式的数据,这些数据无论是文件还是二进制对于 UNIX 内核而言都是一样的。对普通文件内容的解释有处理该文件的应用程序进行。
+
+**目录文件** 目录文件包含了其他文件的名字以及指向与这些文件有关信息的指针。对一个目录文件具有读权限的任一进程都可以读取该目录的内容,但是只有内核才能直接写目录文件。
+
+**块特殊文件** 这种文件类型提供对设备带缓冲的访问,每次访问以固定长度为单位进行。
+
+**字符特殊文件** 这种文件类型提供对设备不带缓冲的访问,每次访问长度可变。系统中的所有设备要么是字符特殊文件,要么是块特殊文件。
+
+**FIFO** 这种类型文件用于进程间通信。也称为命名管道(namedpipe)。
+
+**套接字(socket)** 这种文件类型用于进程间的网络通信。
+
+**符号链接(symbolic link)** 这种文件类型指向另一个文件。
+
+
+
+## 文件描述符
+
+https://www.jianshu.com/p/cded914786d5
+
+文件描述符（file descriptor）是内核为了高效管理已被打开的文件所创建的索引，其是一个非负整数（通常是小整数），用于指代被打开的文件，所有执行I/O操作的系统调用都通过文件描述符。
+
+在linux系统中，所有的文件操作，都是通过fd来定位资源和状态的，不管是读写文件，还是进行网络通信，都需要与相应的fd打交道。
+
+
+
+由内核维护的3个数据结构：
+
+- **进程级文件描述符表(file descriptor table)**
+- **系统级打开文件表(open file table)**
+- **文件系统i-node表(i-node table)**
+
+![img](https://upload-images.jianshu.io/upload_images/2322338-e9e60a745921ba84.png?imageMogr2/auto-orient/strip|imageView2/2/w/700/format/webp)
+
+
+
+
+
+## 进程描述符 PCB
+
+https://blog.csdn.net/lizhidefengzi/article/details/70231334
+
+每一个进程都有一个进程描述符（PCB），在进程创建的时候，生成PCB，在进程消亡的时候撤销PCB，PCB记录了操作系统所需的描述一个进程的所有信息，如打开的文件，挂起的信号量，进程状态以及地址空间等。
+
+在linux中，每一个进程都有一个进程描述符，这个”进程描述符”是一个结构体名字叫做task_struct，在task_struct里面保存了许多关于进程控制的信息。当我们fork()一个进程时，操作系统会为我们生成一个PCB，然后从父进程那里继承一些数据，并同时把新进程插入到进程树中，以待进行管理。
+
+
+
+每个进程都有一个进程描述符，记录以下重要信息：进程标识符、进程当前状态、栈地址空间、内存地址空间、文件系统信息 、打开的文件信息、信号处理等。
+
+
+
+### task_struct 参数
+
+进程标识符（PID）
+
+进程状态 volatile long state; 
+
+进程的内核栈 void *stack;  
+
+进程标记 反应进程状态的信息，但不是运行状态，用于内核识别进程当前的状态 unsigned int flags; 
+
+父子进程 表示进程亲属关系的成员 每个进程都有其父进程，也可能有零个或多个子进程。拥有同一父进程的所有进程具有兄弟关系。
+
+进程地址空间
+
+时间
+
+信号处理
+
+
+
+![img](https://pic3.zhimg.com/80/v2-cc735b1cc4cf703b38c7d5c8806d9dfa_720w.jpg)
+
+
+
+## 进程和线程的区别 
 - 首先从资源来说，进程是资源分配的基本单位，但是线程不拥有资源，线程可以访问隶属进程的资源。
-- 然后从调度来说，线程是独立调度的基本单位，在同一进程中线程切换的话不会引起进程的切换，从一个进程中的线程切换到另一个进程中的线程时，会引起进程的切换。
+- 然后从调度来说，线程是CPU独立调度的基本单位，在同一进程中线程切换的话不会引起进程的切换，从一个进程中的线程切换到另一个进程中的线程时，会引起进程的切换。
 - 从系统开销来讲，由于创建或撤销进程，系统都要分配回收资源，所付出的开销远大于创建或撤销线程时的开销。类似的，在进行进程切换的时候，涉及当前执行进程 CPU 环境的保存及新调度进程 CPU 环境设置，而线程切换只需保存和设置少量寄存器的内容，开销很小。
-- 通信方面来说，线程间可以通过直接读写同一进程的数据进行通信，但是进程通信需要借助一些复杂的方法。
+- 通信方面来说，线程间可以通过直接读写同一进程的数据进行通信，但是进程通信需要借助一些复杂的方法IPC。
 
-另一个版本
 
- - 进程 ：
-     - 进程是资源分配的基本单位。
-    - 进程控制块 (Process Control Block, PCB) 描述进程的基本信息和运行状态，所谓的创建进程和撤销进程，都是指对PCB 的操作。
-- 线程 ：
-     - 线程是独立调度的基本单位。
-	- 一个进程中可以有多个线程，它们共享进程资源。
-- 区别 ：
-	- 拥有资源 ：
-		- 进程是资源分配的基本单位，但是线程不拥有资源，线程可以访问隶属进程的资源。
-	- 调度 ：
-		- 线程是独立调度的基本单位，在同一进程中，线程的切换不会引起进程切换，从一个进程中的线程切换到另一个进程中的线程时，会引起进程切换。
-	- 系统开销 ：
-		- 由于创建或撤销进程时，系统都要为之分配或回收资源，如内存空间、I/O 设备等，所付出的开销远大于创建或撤销线程时的开销。类似地，在进行进程切换时，涉及当前执行进程 CPU 环境的保存及新调度进程 CPU 环境的设置，而线程切换时只需保存和设置少量寄存器内容，开销很小
-		- 由于不同进程的资源相互独立，因此在创建和销毁进程的时候，系统需要进行资源分配和回收，因此进程的创建和销毁的开销要大于线程的创建和销毁。
-		- 在进行进程切换的时候，需要对CPU环境和主存进行切换，而线程切换只需要对少部分的寄存器内容进行切换，开销较小
-	- 通信方面 ：
-		- 线程间可以通过直接读写同一进程中的数据进行通信，但是进程通信需要借助 IPC。
+
+## 协程
+
+协程（Coroutine，又称微线程）是一种比线程更加轻量级的存在，用户态的轻量级线程，协程不是被操作系统内核所管理，而完全是由程序所控制，无需线程上下文切换的开销、无需原子操作锁定及同步的开销。
+
+- 协程只在一个线程中执行的，是子程序之间的切换，发生在用户态上。协程之间的切换不需要涉及任何系统调用或任何阻塞调用。
+
+- 协程只在一个线程中执行，是子程序之间的切换，发生在用户态上。而且，线程的阻塞状态是由操作系统内核来完成，发生在内核态上，因此协程相比线程节省线程创建和切换的开销
+
+- 协程中不存在同时写变量冲突，因为只有一个线程，不存在同时写变量冲突，在协程中控制共享资源只需要判断状态，不必加锁，故执行效率比多线程高。
+
+协程适用于IO阻塞且需要大量并发的场景，当发生IO阻塞，由协程的调度器进行调度，通过将数据流yield掉，并且记录当前栈上的数据，阻塞完后立刻再通过线程恢复栈，并把阻塞的结果放到这个线程上去运行。
+
+
 
 ## 进程间通信的方式
 匿名管道：用于具有亲缘关系的父子进程间或者兄弟进程之间的通信。只存在于内存中。
