回退Java基础面经

--- a/notes/操作系统面经.md
+++ b/notes/操作系统面经.md
@@ -160,7 +160,7 @@ https://blog.csdn.net/lizhidefengzi/article/details/70231334
 
 - 协程中不存在同时写变量冲突，因为只有一个线程，不存在同时写变量冲突，在协程中控制共享资源只需要判断状态，不必加锁，故执行效率比多线程高。
 
-协程适用于IO阻塞且需要大量并发的场景，当发生IO阻塞，由协程的调度器进行调度，通过将数据流yield掉，并且记录当前栈上的数据，阻塞完后立刻再通过线程恢复栈，并把阻塞的结果放到这个线程上去运行。
+**协程适用于IO阻塞且需要大量并发的场景**，当发生IO阻塞，由协程的调度器进行调度，通过将数据流yield掉，并且记录当前栈上的数据，阻塞完后立刻再通过线程恢复栈，并把阻塞的结果放到这个线程上去运行。
 
 
 
