--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -141,6 +141,8 @@ https://www.cnblogs.com/zyh-s/p/13253670.html
 
 https://www.jianshu.com/p/478bc84a7721
 
+
+
 ## 记录锁，间隙锁，临键锁 
 
 **Record Lock：**记录锁，单个行记录上的锁。
@@ -190,14 +192,19 @@ https://www.jianshu.com/p/478bc84a7721
 (32, 45],
 (45, +∞],
 
-执行这条记录 获取了 (24, 32] 这个区间内的临键锁。
+执行下面记录 获取了 (24, 32] 这个区间内的临键锁。
 
+```sql
+-- 根据非唯一索引列 UPDATE 某条记录 
+UPDATE table SET name = Vladimir WHERE age = 24; 
+-- 或根据非唯一索引列 锁住某条记录 
 SELECT * FROM table WHERE age = 24 FOR UPDATE; 
-
+```
 
 
 
 ## 数据库事务隔离级别
+
 数据库事务的隔离级别有4个，由低到高依次为Read uncommitted 、Read committed 、Repeatable read 、Serializable ，这四个级别可以逐个解决脏读 、不可重复读 、幻读 这几类问题。
 
 - 读未提交（Read Uncommitted）：在事务 A 读取数据时，事务 B 读取和修改数据加了共享锁。这种隔离级别，会导致脏读、不可重复读以及幻读。
@@ -216,7 +223,7 @@ SELECT * FROM table WHERE age = 24 FOR UPDATE;
 
 不可重复读对应的是修改，即UPDATE操作。但是可能还会有幻读问题。
 
-因为幻读问题对应的是插入INSERT操作，而不是UPDATE操作。
+因为幻读问题对应的是插入INSERT、DELETE操作，而不是UPDATE操作。
 
 
 
@@ -357,8 +364,6 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 
 
 
-
-
 ## 数据库储存引擎
 
 ### InnoDB
@@ -372,6 +377,8 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 
 支持真正的在线热备份。其它存储引擎不支持在线热备份，要获取一致性视图需要停止对所有表的写入，而在读写混合场景中，停止写入可能也意味着停止读取。
 
+
+
 ### MyISAM
 设计简单，数据以紧密格式存储。对于只读数据，或者表比较小、可以容忍修复操作，则依然可以使用它。
 
@@ -384,6 +391,8 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 可以手工或者自动执行检查和修复操作，但是和事务恢复以及崩溃恢复不同，可能导致一些数据丢失，而且修复操作是非常慢的。
 
 如果指定了 DELAY_KEY_WRITE 选项，在每次修改执行完成时，不会立即将修改的索引数据写入磁盘，而是会写到内存中的键缓冲区，只有在清理键缓冲区或者关闭表的时候才会将对应的索引块写入磁盘。这种方式可以极大的提升写入性能，但是在数据库或者主机崩溃时会造成索引损坏，需要执行修复操作。
+
+
 
 ### 比较
 - 事务：InnoDB 是事务型的，可以使用 Commit 和 Rollback 语句。
@@ -445,7 +454,7 @@ InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 
 - B 树的所有节点既存放键(key) 也存放 数据(data)，而 B+树只有叶子节点存放 key 和 data，其他内节点只存放 key。
 - B 树的叶子节点都是独立的;B+树的叶子节点有一条引用链指向与它相邻的叶子节点。
-- B 树的检索的过程相当于对范围内的每个节点的关键字做二分查找 B+树的检索，都是从根节点到叶子节点的过程，叶子节点的顺序检索很明显
+- B 树的检索的过程相当于对范围内的每个节点的关键字做二分查找；B+树的检索，都是从根节点到叶子节点的过程，叶子节点的顺序检索很明显
 
 
 
