--- a/notes/数据库面经.md
+++ b/notes/数据库面经.md
@@ -147,39 +147,18 @@ https://www.jianshu.com/p/478bc84a7721
 
 **Record Lock：**记录锁，单个行记录上的锁。
 
-**Gap Lock：**间隙锁，锁定一个范围，但不包括记录本身。
-**Next-Key Lock：**临键锁，锁定一个范围，并且锁定记录本身。对于行的查询，都是采用该方法，可以解决幻读的问题。
+**Gap Lock：**间隙锁 锁索引值两边 开区间 不包括索引本身
+**Next-Key Lock：**临键锁，锁定一个范围，并且锁定记录本身。对于行的查询，都是采用该方法，可以解决幻读的问题, 一种特殊的**间隙锁**，锁定一段**左开右闭**的索引区间。
 
 间隙锁和临键锁只有在可重复读的情况下生效
 
 
 
-**记录锁：**
-记录锁就是为某行记录加锁，列必须为唯一索引列或主键列，否则加的锁就会变成临键锁，
-查询语句必须为精准匹配 = ，不能为 >、<、like等，否则也会退化成临键锁。
+## 临键锁 
 
-**间隙锁：**
-间隙锁基于非唯一索引，它锁定一段范围内的索引记录，但不包括记录本身。比如查询字段区间为1-5，即1-5内的记录行都会被锁住，2、3、4 的数据行的会被阻塞，但是 1 和 5 两条记录行并不会被锁住。
+**Next-key锁是记录锁和间隙锁的组合，它指的是加在某条记录以及这条记录前面间隙上的锁**。
 
-**临键锁：**
-
-锁定一个范围，并且锁定记录本身。**对于行的查询，都是采用该方法，可以解决幻读的问题。**
-
-临键锁可以理解为一种特殊的间隙锁，上面说过了通过临建锁可以解决幻读的问题。 每个数据行上的非唯一索引列上都会存在一把临键锁，当某个事务持有该数据行的临键锁时，会锁住一段左开右闭区间的数据。
-
-
-
-**记录锁**存在于包括**主键索引**在内的**唯一索引**中，锁定单条索引记录。
-
-**间隙锁**存在于**非唯一索引**中，锁定**开区间**范围内的一段间隔，它是基于**临键锁**实现的。
-
-**临键锁**存在于**非唯一索引**中，该类型的每条记录的索引上都存在这种锁，它是一种特殊的**间隙锁**，锁定一段**左开右闭**的索引区间。
-
-
-
-总结：
-
-间隙锁 锁索引值两边 开区间 不包括索引本身
+也可以理解为一种特殊的**间隙锁**。通过**临建锁**可以解决`幻读`的问题。 每个数据行上的**非唯一索引列**上都会存在一把**临键锁**，当某个事务持有该数据行的**临键锁**时，会锁住一段**左开右闭区间**的数据。需要强调的一点是，InnoDB 中**行级锁**是基于索引实现的，**临键锁**只与**非唯一索引列**有关，在`唯一索引列（包括主键列）上不存在临键锁`。
 
 临键锁锁 一个左开右闭的数据，比如
 
@@ -200,6 +179,29 @@ UPDATE table SET name = Vladimir WHERE age = 24;
 -- 或根据非唯一索引列 锁住某条记录 
 SELECT * FROM table WHERE age = 24 FOR UPDATE; 
 ```
+
+
+
+**记录锁：**
+记录锁就是为某行记录加锁，列必须为唯一索引列或主键列，否则加的锁就会变成临键锁，
+查询语句必须为精准匹配 = ，不能为 >、<、like等，否则也会退化成临键锁。
+
+**间隙锁：**
+间隙锁基于非唯一索引，它锁定一段范围内的索引记录，但**不包括记录本身**。比如查询字段区间为1-5，即1-5内的记录行都会被锁住，2、3、4 的数据行的会被阻塞，但是 1 和 5 两条记录行并不会被锁住。
+
+**临键锁：**
+
+锁定一个范围，并且锁定记录本身。**对于行的查询，都是采用该方法，可以解决幻读的问题。**
+
+临键锁可以理解为一种特殊的间隙锁，上面说过了通过临建锁可以解决幻读的问题。 每个数据行上的非唯一索引列上都会存在一把临键锁，当某个事务持有该数据行的临键锁时，会锁住一段**左开右闭**区间的数据。
+
+
+
+**记录锁**存在于包括**主键索引**在内的**唯一索引**中，锁定单条索引记录。
+
+**间隙锁**存在于**非唯一索引**中，锁定**开区间**范围内的一段间隔，它是基于**临键锁**实现的。
+
+**临键锁**存在于**非唯一索引**中，该类型的每条记录的索引上都存在这种锁，它是一种特殊的**间隙锁**，锁定一段**左开右闭**的索引区间。
 
 
 
