--- a/notes/美的实习.md
+++ b/notes/美的实习.md
@@ -1,2 +1,61 @@
 https://www.jianshu.com/p/51930cc5dcf9
 
+
+
+### 单元测试Mock
+
+在单元测试中，我们往往想去独立地去测一个类中的某个方法，但是这个类可不是独立的，它会去调用一些其它类的方法和service(Database Hadoop dbfs Hive Hbase 其他service)，这也就导致了以下两个问题：外部服务可能无法在单元测试的环境中正常工作，因为它们可能需要访问数据库或者使用一些其它的外部系统。我们的测试关注点在于这个类的实现上，外部类的一些行为可能会影响到我们对本类的测试，那也就失去了我们进行单测的意义。
+
+
+mock对象就是在调试期间用来作为真实对象的替代品
+mock测试就是在测试过程中，对那些不容易构建的对象用一个虚拟对象来代替测试的方法就叫mock测试
+
+
+
+**“mock框架”**（**Mockito 、jmock 、 powermock、EasyMock**），可以通过mock框架模拟一个对象的行为，从而隔离开我们不关心的其他对象，使得测试变得简单。（例如service调用dao，即service依赖dao，我们可以通过mock dao来模拟真实的dao调用，从而能达到测试service的目的。）
+
+## Mockito和PowerMock
+
+PowerMock是Java开发中的一种Mock框架，用于单元模块测试。当你想要测试一个service接口，但service需要经过防火墙访问，防火墙不能为你打开或者你需要认证才能访问。遇到这样情况时，你可以在你能访问的地方使用MockService替代，模拟实现获取数据。
+PowerMock可以实现完成对private/static/final方法的Mock（模拟），而Mockito可以对普通的方法进行Mock，如：public等。
+
+Mockito.when().thenReturn()
+
+PowerMockito.when().thenReturn()
+
+
+
+## Junit单测
+
+JUnit是单元测试框架，可以轻松的完成关联依赖关系少或者比较简单的类的单元测试，但是对于关联到其它比较复杂的类或对运行环境有要求的类的单元测试，模拟环境或者配置环境会非常耗时，实施单元测试比较困难。
+
+在 JUnit 4 中，单元测试用例的执行顺序为：
+
+![img](https://img-blog.csdn.net/20140723195956866?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvaGFwcHlsZWU2Njg4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
+
+
+
+
+
+## 软件测试
+
+单元测试 集成测试 系统测试 验收测试
+
+
+
+软件的基本测试方法主要有静态测试和动态测试、功能测试、性能测试、黑盒测试和白盒测试
+
+
+
+黑盒测试用例设计方法包括**等价类划分法、边界值分析法、错误推测法**、因果图法、判定表驱动法、正交试验设计法、功能图法、场景图法等。
+
+- 等价类划分，就是将测试的范围划分成几个互不相交的子集，他们的并集是全集，从每个子集选出若干个**有代表性**的值作为测试用例。
+
+- 边界值分析，大量的错误是发生在输入或输出范围的边界上，而不是发生在输入输出范围的内部。因此针对各种边界情况设计测试用例，可以查出更多的错误。选出的测试用例，应选取正好等于、刚刚大于、刚刚小于边界的值。
+
+- 错误推测，大量的错误是发生在输入或输出范围的边界上，而不是发生在输入输出范围的内部。因此针对各种边界情况设计测试用例，可以查出更多的错误。选出的测试用例，应选取正好等于、刚刚大于、刚刚小于边界的值
+
+
+
+
+
