--- a/notes/排序算法.md
+++ b/notes/排序算法.md
@@ -58,21 +58,27 @@ https://www.cnblogs.com/zwtgyh/p/10631760.html
 
 思想：希尔排序又叫“缩小增量排序”，先取一个小于n的整数d1作为第一个增量，把文件的全部记录分成d1个组。所有距离为d1的倍数的记录放在同一个组中。先在各组内进行直接插入排序，然后取第二个增量d2。其是插入排序改良的算法，希尔排序步长从大到小调整，第一次循环后面元素逐个和前面元素按间隔步长进行比较并交换，直至步长为1，步长选择是关键。
 
+**![image-20220524202217376](排序算法/image-20220524202217376.png)**
+
+**基数排序**
+
+[基数排序](https://so.csdn.net/so/search?q=基数排序&spm=1001.2101.3001.7020)(Radix Sort)是桶排序的扩展，它的基本思想是：将整数按位数切割成不同的数字，然后按每个位数分别比较
 
 
 
-
-
-
-##  快排序
+**快速排序**
 
 ![image-20220524171459820](排序算法/image-20220524171459820.png)
 
-## 堆排序
+
+
+**堆排序**
 
 ![image-20220524171257059](排序算法/image-20220524171257059.png)
 
-## 归并排序
+
+
+**归并排序**
 
 ![image-20220524171610943](排序算法/image-20220524171610943.png)
 
