--- a/notes/美的实习.md
+++ b/notes/美的实习.md
@@ -1,6 +1,8 @@
 https://www.jianshu.com/p/51930cc5dcf9
 
+软件测试
 
+https://blog.csdn.net/m0_59868866/article/details/120833236
 
 ### 单元测试Mock
 
@@ -39,23 +41,102 @@ JUnit是单元测试框架，可以轻松的完成关联依赖关系少或者比
 
 ## 软件测试
 
-单元测试 集成测试 系统测试 验收测试
+和开发过程相对应，测试过程会依次经历单元测试、集成测试、系统测试、验收测试四个主要阶段：
+
+- 单元测试：单元测试是针对软件设计的最小单位––程序模块甚至代码段进行正确性检验的测试工作，通常由开发人员进行。
+
+- 集成测试：集成测试是将模块按照设计要求组装起来进行测试，主要目的是发现与接口有关的问题。由于在产品提交到测试部门前，产品开发小组都要进行联合调试，因此在大部分企业中集成测试是由开发人员来完成的。
+
+- 系统测试：系统测试是在集成测试通过后进行的，目的是充分运行系统，验证各子系统是否都能正常工作并完成设计的要求。它主要由测试部门进行，是测试部门最大最重要的一个测试，对产品的质量有重大的影响。
+
+- 验收测试：验收测试以需求阶段的《需求规格说明书》为验收标准，测试时要求模拟实际用户的运行环境。对于实际项目可以和客户共同进行，对于产品来说就是最后一次的系统测试。测试内容为对功能模块的全面测试，尤其要进行文档测试。
 
 
+
+## 软件的基本测试方法
 
 软件的基本测试方法主要有静态测试和动态测试、功能测试、性能测试、黑盒测试和白盒测试
 
+- 静态测试是不运行程序本身而寻找程序代码中可能存在的错误或评估程序代码的过程。
 
+- 动态测试是实际运行被测程序，输入相应的测试实例，检查运行结果与预期结果的差异，判定执行结果是否符合要求，从而检验程序的正确性、可靠性和有效性，并分析系统运行效率和健壮性等性能。
+
+- 黑盒测试一般用来确认软件功能的正确性和可操作性,目的是检测软件的各个功能是否能得以实现,把被测试的程序当作一个黑盒,不考虑其内部结构,在知道该程序的输入和输出之间的关系或程序功能的情况下,依靠软件规格说明书来确定测试用例和推断测试结果的正确性。
+
+- 白盒测试根据软件内部的逻辑结构分析来进行测试,是基于代码的测试，测试人员通过阅读程序代码或者通过使用开发工具中的单步调试来判断软件的质量，一般黑盒测试由项目经理在程序员开发中来实现。
+
+- α测试是由一个用户在开发环境下进行的测试，也可以是公司内部的用户在模拟实际操作环境下进行的受控测试，Alpha测试不能由程序员或测试员完成。
+
+- β测试是软件的多个用户在一个或多个用户的实际使用环境下进行的测试。开发者通常不在测试现场，Beta测试不能由程序员或测试员完成。
+
+
+
+## 黑盒测试 白盒测试
+
+白盒测试：逻辑覆盖、循环覆盖、基本路径覆盖
 
 黑盒测试用例设计方法包括**等价类划分法、边界值分析法、错误推测法**、因果图法、判定表驱动法、正交试验设计法、功能图法、场景图法等。
 
 - 等价类划分，就是将测试的范围划分成几个互不相交的子集，他们的并集是全集，从每个子集选出若干个**有代表性**的值作为测试用例。
-
 - 边界值分析，大量的错误是发生在输入或输出范围的边界上，而不是发生在输入输出范围的内部。因此针对各种边界情况设计测试用例，可以查出更多的错误。选出的测试用例，应选取正好等于、刚刚大于、刚刚小于边界的值。
-
 - 错误推测，大量的错误是发生在输入或输出范围的边界上，而不是发生在输入输出范围的内部。因此针对各种边界情况设计测试用例，可以查出更多的错误。选出的测试用例，应选取正好等于、刚刚大于、刚刚小于边界的值
+- 因果图方法：前面介绍的等价类划分方法和边界值分析方法,都是着重考虑输入条件,但未考虑输入条件之间的联系, 相互组合等. 考虑输入条件之间的相互组合,可能会产生一些新的情况. 但要检查输入条件的组合不是一件容易的事情, 即使把所有输入条件划分成等价类,他们之间的组合情况也相当多. 因此必须考虑采用一种适合于描述对于多种条件的组合,相应产生多个动作的形式来考虑设计测试用例. 这就需要利用因果图(逻辑模型). 因果图方法最终生成的就是判定表. 它适合于检查程序输入条件的各种组合情况.
+- 正交表分析法：可能因为大量的参数的组合而引起测试用例数量上的激增，同时，这些测试用例并没有明显的优先级上的差距，而测试人员又无法完成这么多数量的测试，就可以通过正交表来进行缩减一些用例，从而达到尽量少的用例覆盖尽量大的范围的可能性。
+- 场景分析方法：指根据用户场景来模拟用户的操作步骤，这个比较类似因果图，但是可能执行的深度和可行性更好。
+- 状态图法：通过输入条件和系统需求说明得到被测系统的所有状态，通过输入条件和状态得出输出条件;通过输入条件、输出条件和状态得出被测系统的测试用例。
+- 大纲法：大纲法是一种着眼于需求的方法，为了列出各种测试条件，就将需求转换为大纲的形式。大纲表示为树状结构，在根和每个叶子结点之间存在唯一的路径。大纲中的每条路径定义了一个特定的输入条件集合，用于定义测试用例。树中叶子的数目或大纲中的路径给出了测试所有功能所需测试用例的大致数量。
 
 
+
+**优缺点**
+
+黑盒测试的优点有：比较简单，不需要了解程序内部的代码及实现;与软件的内部实现无关; 从用户角度出发，能很容易的知道用户会用到哪些功能，会遇到哪些问题;基于软件开发文档，所以也能知道软件实现了文档中的哪些功能;在做软件自动化测试时较为方便。
+
+黑盒测试的缺点有：不可能覆盖所有的代码，覆盖率较低，大概只能达到总代码量的30%;自动化测试的复用性较低。
+
+白盒测试的优点有：帮助软件测试人员增大代码的覆盖率，提高代码的质量，发现代码中隐 藏的问题。
+
+白盒测试的缺点有：程序运行会有很多不同的路径，不可能测试所有的运行路径;测试基于代码，只能测试开发人员做的对不对，而不能知道设计的正确与否，可能会漏掉一些功能需求;系统庞大时，测试开销会非常大。
+
+
+
+
+
+## 软件产品质量特性是什么?
+
+功能性：适应性、准确性、互操作性、依从性、安全性。
+
+可靠性：成熟性、容错性、易恢复性。
+
+可使用性：易理解性、易学习性、易操作性。
+
+效率：时间特性、资源特性。
+
+可维护性：易分析性、易变更性、稳定性、易测试性。
+
+可移植性： 适应性、易安装性、遵循性、易替换性
+
+
+
+## 如何测试一个纸杯?
+
+功能度：用水杯装水看漏不漏;水能不能被喝到
+
+安全性：杯子有没有毒或细菌
+
+可靠性：杯子从不同高度落下的损坏程度
+
+可移植性：杯子在不同的地方、温度等环境下是否都可以正常使用
+
+兼容性：杯子是否能够容纳果汁、白水、酒精、汽油等
+
+易用性：杯子是否烫手、是否有防滑措施、是否方便饮用
+
+用户文档：使用手册是否对杯子的用法、限制、使用条件等有详细描述
+
+疲劳测试：将杯子盛上水(案例一)放24小时检查泄漏时间和情况;盛上汽油(案例二)放24小时检查泄漏时间和情况等
+
+压力测试：用根针并在针上面不断加重量，看压强多大时会穿透
 
 
 
