--- a/notes/计算机网络面经.md
+++ b/notes/计算机网络面经.md
@@ -700,6 +700,16 @@ HTTP/2 是 HTTP 协议家族中真正意义的多路复用长连接，通过对 
 
 ## Cookie 和 Session 的区别
 
+Cookie通过在客户端记录信息确定用户身份，Session通过在服务器端记录信息确定用户身份
+
+Cookie就是由服务器发给客户端的特殊信息，而这些信息以文本文件的方式存放在客户端，然后客户端每次向服务器发送请求的时候都会带上这些特殊的信息。这些信息并不是存放在HTTP响应体（Response Body）中的，而是存放于HTTP响应头；有了Cookie这样的技术实现，服务器在接收到来自客户端浏览器的请求之后，就能够通过分析存放于请求头的Cookie得到客户端特有的信息，从而动态生成与该客户端相对应的内容。
+
+
+
+Session技术则是服务端的解决方案，它是通过服务器来保持状态的。服务器会为Session生成唯一的Session id，而这个Session id在随后的请求中会被用来重新获得已经创建的Session；为防止内存溢出，服务器会把长时间内没有活跃的Session从内存删除。这个时间就是Session的超时时间。如果超过了超时时间没访问过服务器，Session就自动失效了。
+
+![image-20220525145616222](计算机网络面经/image-20220525145616222.png)
+
 1. cookie：
 what：cookie 是保存在客户端浏览器里的一种信息载体。
 why：用来保存一些站点的用户数据，这样能够为用户定值一些功能，比如免登陆功能。
@@ -753,7 +763,9 @@ URL 重写技术，可以把 sessionID 作为 URL 的参数进行传递。
 当没有数据传递，例如做了更新操作跳转到其他页面，就用重定向。
 
 
+
 # 2. 传输层：
+
 为两台主机中的进程间提供通用的数据传输服务。
 为上层提供服务：把应用层的报文封装成 TCP 的报文段或 UDP 的用户数据报进行传送。
 TCP、UDP
